--- a/templates/admin/view_faculty.html
+++ b/templates/admin/view_faculty.html
@@ -1,4 +1,4 @@
-{% extends "teacher/teacher_home.html" %} {% block title %} List of Referred Students {% endblock %} {% block content %} <style>
+{% extends "admin/admin_home.html" %} {% block title %} View Offer {% endblock %} {% block content %} <style>
   /* Table Styles */
   .table-wrapper {
     margin: 10px 70px 70px;
@@ -43,10 +43,6 @@
     background: #F8F8F8;
   }
 
-  tr:nth-child(odd):hover td {
-    background: #C1C3D1;
-  }
-
   /* Responsive */
   @media (max-width: 767px) {
     .fl-table {
@@ -86,13 +82,13 @@
     .fl-table td,
     .fl-table th {
       padding: 20px .625em .625em .625em;
-      height: 80px;
+      height: 60px;
       vertical-align: middle;
       box-sizing: border-box;
       overflow-x: hidden;
       overflow-y: auto;
       width: 120px;
-      font-size: 20px;
+      font-size: 13px;
       text-overflow: ellipsis;
     }
 
@@ -128,14 +124,11 @@
     }
   }
 
-  .thkid {
-    font-size: 17px;
-  }
-
   .fac {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 20px;
   }
 
   .buttonF {
@@ -158,47 +151,16 @@
     outline: none;
   }
 
-  .center {
-    text-align: center;
+  .program {
+    font-size: 16px;
+    color: #000000;
   }
 
-  .center_title {
-    text-align: center;
-    margin-right: 20px;
-    font-size: 20px;
-  }
-
-  .button {
-    margin: 0 auto;
-    width: 96px;
-    height: 27px;
-    font-family: 'Roboto', sans-serif;
-    font-size: 12px;
-    text-transform: uppercase;
-    letter-spacing: 2.5px;
-    font-weight: 500;
-    color: #000;
-    background-color: #fff;
-    border: none;
-    border-radius: 45px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-    outline: none;
-  }
-
-  .button:hover {
-    background-color: #95B9C7;
-    box-shadow: 0px 15px 20px #C9C0BB;
-    color: #fff;
-  }
-
-  #id_filter_choice {
-    min-width: 180px;
+  .list {
+    font-size: 18px;
   }
 
   .parent_program {
-    text-align: left;
     border: solid 1px #DDEEEE;
     color: #333;
     padding: 10px;
@@ -208,56 +170,25 @@
   tr:hover {
     background-color: #E6E4E4;
   }
-
-  #id_filter_choice {
-    height: 3vh;
-    width: fit-content;
-  }
 </style>
 <div class="fac">
-  <button type="submit" class="buttonF">Referred Student </button>
+  <button type="submit" class="buttonF">Faculties</button>
 </div>
 <br>
-<br>
-<form method="POST"> {% csrf_token %} <div class="center_title">
-    <p>
-      <i>
-        <h4>Choose Filter: &nbsp; {{status|title}} </h4>
-      </i>
-    </p>
-  </div>
-  <div class="center">
-    {{filterform.filter_choice}} &nbsp; <button type="submit" class="button">OK</button>
-  </div>
-</form>
 <br>
 <div class="table-wrapper">
   <table class="fl-table">
     <thead>
       <tr>
-        <th class="thkid">Session Date</th>
-        <th class="thkid">ID Number</th>
-        <th class="thkid">Students Name</th>
-        <th class="thkid">Degree Program</th>
-        <th class="thkid">Status</th>
-        <th class="thkid">Information</th>
+        <th class="list" style="text-align: center; margin: 100px">List of Faculty</th>
       </tr>
-    </thead> {% for object in object_list reversed %} <tbody>
+    </thead> {% for obj in faculty %} <tbody>
       <tr>
-        <td style="font-size: 16px;" class="parent_program">{{object.date}}</td>
-        <td style="font-size: 16px;" class="parent_program">{{object.studnumber}}</td>
-        <td style="font-size: 16px;" class="parent_program">{{object.lastname}}, &nbsp; {{object.firstname}}</td>
-        <td style="font-size: 16px;" class="parent_program">{{object.degree_program}}</td>
-        <td style="font-size: 16px;" class="parent_program">{{object.status|title}}</td>
-        <td style="font-size: 16px; color: black;" class="parent_program">
-          <a href="{% url 'teacher_view_detail_referred_students' object.id %}" style="font-weight: 550; color: black;">View More Information</a>
+        <td class="parent_program" style="font-size: 15px;  text-align: left;">
+          <b>{{obj.lastname}}, {{obj.firstname}}</b>
         </td>
       </tr>
-    <tbody> {% endfor %}
+    </tbody> {% endfor %}
   </table>
-  <div style="padding: 2px;"> {% if not object_list %} <center>
-      <p style="font-size: 16px;">
-        <b>No Students Yet!</b>
-      </p>
-    </center> {% endif %} </div>
-</div> {% endblock %}
+</div>
+ {% endblock %}
