--- a/templates/counselor/feedback.html
+++ b/templates/counselor/feedback.html
@@ -1,24 +1,18 @@
-{% extends "counselor/modalC.html" %}
-
-
-
-{% block content %} 
-<style>
-
+{% extends "counselor/modalC.html" %} {% block content %} <style>
   .login_btn {
-		width: 100%;
-		background: #d8c090!important;
-		color: white !important;
-	}
+    width: 100%;
+    background: #d8c090 !important;
+    color: white !important;
+  }
 
-	.login_btn:focus {
-		box-shadow: none !important;
-		outline: 0px !important;
-	}
+  .login_btn:focus {
+    box-shadow: none !important;
+    outline: 0px !important;
+  }
 
-	.login_container {
-		padding: 0 2rem;
-	}
+  .login_container {
+    padding: 0 2rem;
+  }
 
   button {
     width: 50%;
@@ -32,217 +26,204 @@
     letter-spacing: 1px;
     text-transform: uppercase;
     transition: transform 80ms ease-in;
-}
+  }
 
-form.cleanForm {
-width:700px;
-margin:0 auto;
+  form.cleanForm {
+    width: 700px;
+    margin: 0 auto;
+  }
 
-}
-form.cleanForm p {
-margin-bottom:15px;
-}
+  form.cleanForm p {
+    margin-bottom: 15px;
+  }
 
-.column{
- width:250px;
- float:left;
- margin-right:20px;
- padding: 10px;   
-}
-.row{
- width: 450px;
- float:right;
+  .column {
+    width: 250px;
+    float: left;
+    margin-right: 20px;
+    padding: 10px;
+  }
 
- text-align: left;
+  .row {
+    width: 450px;
+    float: right;
+    text-align: left;
+  }
 
+  .row1 {
+    width: 450px;
+    float: left;
+    margin-left: 250px;
+    text-align: left;
+  }
 
-}
-.row1{
- width: 450px;
- float:left;
- margin-left: 250px;
- text-align: left;
+  .row2 {
+    width: 550px;
+    float: left;
+    margin-left: 400px;
+  }
 
-}
-.row2{
- width: 550px;
- float:left;
- margin-left: 400px;
-}
+  .last {
+    margin: 0;
+    padding: 10px;
+  }
 
-.last{
- margin:0;
- padding: 10px;   
-}
-.pText{
-  font-weight: 600;
-  
-}
-.bText{
-  color: #000;
+  .pText {
+    font-weight: 600;
+  }
 
-}
-.form-field{
-  height: 900px;
-  width: 600px;
-}
-#id_feedback{
-  width: 1100px;
+  .bText {
+    color: #000;
+  }
+
+  .form-field {
+    height: 900px;
+    width: 600px;
+  }
+
+  #id_feedback {
+    width: 1100px;
     height: 200px;
     overflow-y: scroll;
-}
-#id_remarks{
-  width: 1100px;
+  }
+
+  #id_remarks {
+    width: 1100px;
     height: 200px;
-}
-.buttons{
-  width: 200px;
-  height: auto;
-  border: 5em;
-  cursor: pointer;
-  outline: none;
-  font-size: 16px;
-  -webkit-transform: translate(0);
-  transform: translate(0);
-  background-image: linear-gradient(45deg, #98b4ac, #4863A0);
-  padding: 0.7em 2em;
-  border-radius: 65px;
-  box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.438);
-  -webkit-transition: box-shadow 0.25s;
-  transition: box-shadow 0.25s;
-  color: white;
-}
-.buttons .text {
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-image: linear-gradient(45deg, #4863A0, #98b4ac);
-}
+  }
 
-.buttons:after {
-  content: "";
-  border-radius: 18px;
-  position: absolute;
-  margin: 4px;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  z-index: -1;
-  background: #E5E4E2;
-}
+  .buttons {
+    width: 200px;
+    height: auto;
+    border: 5em;
+    cursor: pointer;
+    outline: none;
+    font-size: 16px;
+    -webkit-transform: translate(0);
+    transform: translate(0);
+    background-image: linear-gradient(45deg, #98b4ac, #4863A0);
+    padding: 0.7em 2em;
+    border-radius: 65px;
+    box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.438);
+    -webkit-transition: box-shadow 0.25s;
+    transition: box-shadow 0.25s;
+    color: white;
+  }
 
-.buttons:hover {
-  background-image: linear-gradient(-45deg, #98b4ac, #4863A0);
-  box-shadow: 0 12px 24px rgba(128, 128, 128, 0.1);
-}
+  .buttons .text {
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-image: linear-gradient(45deg, #4863A0, #98b4ac);
+  }
 
-.buttons:hover .text {
-  background-image: linear-gradient(-45deg, #4863A0, #98b4ac);
-}
-.fac{
+  .buttons:after {
+    content: "";
+    border-radius: 18px;
+    position: absolute;
+    margin: 4px;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
+    background: #E5E4E2;
+  }
 
-display: flex;
-align-items: center;
-justify-content: center;
+  .buttons:hover {
+    background-image: linear-gradient(-45deg, #98b4ac, #4863A0);
+    box-shadow: 0 12px 24px rgba(128, 128, 128, 0.1);
+  }
 
-}
+  .buttons:hover .text {
+    background-image: linear-gradient(-45deg, #4863A0, #98b4ac);
+  }
 
-.buttonF {
-  padding: 18px;
-width: 420px;
-height: 55px;
-font-family: 'Roboto', sans-serif;
-font-size: 15px;
-text-transform: uppercase;
-letter-spacing: 2.5px;
-font-weight: 600;
-color: #fff;
-background-color: #4863A0;
-border: none;
-border-radius: 45px;
-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-transition: all 0.3s ease 0s;
-cursor: pointer;
-outline: none;
-}
+  .fac {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
-.button {
-  width: 200px;
-  height: auto;
-  border: 5em;
-  cursor: pointer;
-  outline: none;
-  font-size: 16px;
-  -webkit-transform: translate(0);
-  transform: translate(0);
-  background-color: #d8c090;
-  padding: 0.7em 2em;
-  border-radius: 65px;
-  box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.438);
-  -webkit-transition: box-shadow 0.25s;
-   transition: all 0.3s ease 0s;
+  .buttonF {
+    padding: 18px;
+    width: 420px;
+    height: 55px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 600;
+    color: #fff;
+    background-color: #4863A0;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  }
+
+  .button {
+    width: 200px;
+    height: auto;
+    border: 5em;
+    cursor: pointer;
+    outline: none;
+    font-size: 16px;
+    -webkit-transform: translate(0);
+    transform: translate(0);
+    background-color: #d8c090;
+    padding: 0.7em 2em;
+    border-radius: 65px;
+    box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.438);
+    -webkit-transition: box-shadow 0.25s;
+    transition: all 0.3s ease 0s;
     letter-spacing: 2.5px;
   }
 
-.button:hover {
-  background-color: #95B9C7;
-  box-shadow: 0px 15px 20px #C9C0BB;
-  color: #fff;
-  transform: translateY(-7px);
-}
-  </style>
-  
-
+  .button:hover {
+    background-color: #95B9C7;
+    box-shadow: 0px 15px 20px #C9C0BB;
+    color: #fff;
+    transform: translateY(-7px);
+  }
+</style>
 <br>
-<br>   
-
-
-
-  <form action="#" class="cleanForm" method="POST">
-
-
-    <div class="fac">
-          {% for message in messages %}
-     <p class="buttonF">{{message}} !</p>
-     {% endfor %}
+<br>
+<form action="#" class="cleanForm" method="POST">
+  <div class="fac"> {% for message in messages %} <p class="buttonF">{{message}} !</p> {% endfor %} </div>
+  <div class="column">
+    <div class="row">
+      <p class="pText">
+        <b class="bText">Date Referred: &nbsp;</b> {{info.created_at}}
+      </p>
+      <p class="pText">
+        <b class="bText">Name of Student Referred: &nbsp;</b> {{student.lastname}}, {{student.firstname}}
+      </p> &nbsp; &nbsp; <form method="POST" action="" class="form-field"> {% csrf_token %} <i>
+          <h4 class="bText">Actions Taken/Strategies taken by the Counselor:</h4>
+        </i>
+        {{object.feedback}}
+        <i>
+          <h4 class="bText">Input Remarks here:</h4>
+        </i>
+        {{object.remarks}}
+        <p class="pText">
+          <b class="bText">Prepared by: &nbsp;</b> {{info2.firstname}} {{info2.lastname}}
+        </p>
+        <br>
+        <button class="button" style="font-weight: 900; color: #454545;">Submit</button>
+      </form>
+      <br>
     </div>
-
-        <div class="column">
-          <div class="row">     
-            <p class="pText"><b class="bText">Date Referred: &nbsp;</b> {{info.created_at}}</p> 
-            <p class="pText"><b class="bText" >Name of Student Referred: &nbsp;</b> {{student.lastname}}, {{student.firstname}}</p> 
-            
-          &nbsp;    &nbsp;
-            <form  method="POST" action="" class="form-field" > 
-    
-              {% csrf_token %}
-             <i><h4  class="bText" >Actions Taken/Strategies taken by the Counselor:</h4> </i>
-             {{object.feedback}}
-             <i><h4  class="bText" >Input Remarks here:</h4> </i>
-             {{object.remarks}}
-             <p class="pText"><b class="bText">Prepared by: &nbsp;</b> {{info2.firstname}} {{info2.lastname}}</p>
-            <br> 
-            <button class="button" style="font-weight: 900; color: #454545;">Submit</button>
-            </form>
-
-<br>
-          
-
-          </div>
-          </div>
-
-
-        <div class="column">
-          <div class="row1"> 
-            <p class="pText"><b class="bText">Reffered by: &nbsp;</b> {{info1.firstname}} {{info1.lastname}}</p>
-            <p class="pText"><b class="bText">Subject of Student Referred: &nbsp;</b>{{student.subject_referred}}</p>
-        
-            &nbsp;    &nbsp;   
-          </div>
-         
-          </div>
-        
-    </form>
-
-   
-{% endblock %}
+  </div>
+  <div class="column">
+    <div class="row1">
+      <p class="pText">
+        <b class="bText">Reffered by: &nbsp;</b> {{info1.firstname}} {{info1.lastname}}
+      </p>
+      <p class="pText">
+        <b class="bText">Subject of Student Referred: &nbsp;</b>{{student.subject_referred}}
+      </p> &nbsp; &nbsp;
+    </div>
+  </div>
+</form> {% endblock %}
