--- a/templates/counselor/search_view_feedback.html
+++ b/templates/counselor/search_view_feedback.html
@@ -231,7 +231,7 @@
     <button type="submit" class="buttonF">List of Feedback From Counseled Students</button>
   </div>
 
-  <!-- <form method="POST" action="{% url 'counselor_search_view_feedback' %}"> {% csrf_token %} <div class="center_title">
+  <form method="POST" action="{% url 'counselor_search_view_feedback' %}"> {% csrf_token %} <div class="center_title">
       <p>
         <i>
           <h4>Seach pailyedo</h4>
@@ -242,7 +242,7 @@
       {{ search }}
       <button type="submit" class="button">Submit</button>
     </div>
-  </form> -->
+  </form>
   <br>
   <form method="POST" action="{% url 'counselor_view_another_feedback' %}"> {% csrf_token %} <div class="center_title">
       <p>
