--- a/templates/signup.html
+++ b/templates/signup.html
@@ -53,17 +53,20 @@
 		margin: 15px 0;
 	}
 
-	button {
-		border-radius: 20px;
-		border: 1px solid #48444c;
-		color: #FFFFFF;
-		font-size: 12px;
-		font-weight: bold;
-		padding: 12px 45px;
-		letter-spacing: 1px;
-		text-transform: uppercase;
-		transition: transform 80ms ease-in;
-	}
+
+    button {
+      border-radius: 20px;
+      border: 1px solid #95B9C7;
+      color: #FFFFFF;
+      font-size: 13.5px;
+      font-weight: bold;
+      padding: 0 auto;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      transition: transform 80ms ease-in;
+      margin: 0 auto;
+      height: 3.5vh;
+    }
 
 	form {
 		background-color: #FFFFFF;
@@ -192,16 +195,24 @@
 
 	}
 
-	.login_btn {
-		width: 100%;
-		background: #48444c !important;
-		color: white !important;
-	}
 
-	.login_btn:focus {
-		box-shadow: none !important;
-		outline: 0px !important;
-	}
+    .login_btn {
+      width: 60%;
+      background: #95B9C7 !important;
+      color: white !important;
+    }
+
+    .login_btn:focus {
+      box-shadow: none !important;
+      outline: 0px !important;
+    }
+
+    .login_btn:hover {
+      background-color: #95B9C7;
+      box-shadow: 0px 5px 5px #C9C0BB;
+      color: #fff;
+      transform: translateY(-7px);
+    }
 
 	.login_container {
 		padding: 0 2rem;
@@ -238,16 +249,6 @@
       margin-left: 90px; */
 	}
 
-	.login_btn {
-		width: 60%;
-		background: #48444c !important;
-		color: white !important;
-	}
-
-	.login_btn:focus {
-		box-shadow: none !important;
-		outline: 0px !important;
-	}
 </style>
 
 <body>
