--- a/templates/student/schedule.html
+++ b/templates/student/schedule.html
@@ -1,182 +1,158 @@
-{% extends "student/student_home.html" %}
+{% extends "student/student_home.html" %} {% block title %} Schedule {% endblock %} {% block content %} <style>
+  form.cleanForm {
+    min-width: auto;
+    margin-left: 20px;
+    float: center;
+  }
 
-{% block title %} 
-Schedule
-{% endblock %} 
+  form.cleanForm p {
+    margin-bottom: 15px;
+  }
 
+  .column {
+    width: 250px;
+    float: left;
+    margin-right: 20px;
+    padding: 10px;
+  }
 
-{% block content %} 
-
-<style>
-
-
-form.cleanForm {
-min-width: auto;
-margin-left: 20px;
-float: center;
-
-
-}
-form.cleanForm p {
-margin-bottom:15px;
-}
-
-.column{
- width:250px;
- float:left;
- margin-right:20px;
- padding: 10px;   
-}
-.row{
- min-width: none;
- /* float:left;
+  .row {
+    min-width: none;
+    /* float:left;
  text-align: left; */
-  margin-right: 10px;
- margin-right: auto;
- margin-left: auto;
-}
-.students_information{
-   min-width: none;
- float:left;
- text-align: left;
-}
+    margin-right: 10px;
+    margin-right: auto;
+    margin-left: auto;
+  }
 
-.pText{
-  font-weight: 600;
-  justify-content: center;
-}
-.bText{
-  color: #000;
-}
-.form-field{
-  height: 900px;
-  width: 600px;
-}
-#id_reasons{
-  margin-left: auto;
-  margin-right: auto;
-  width: 55vw;
+  .students_information {
+    min-width: none;
+    float: left;
+    text-align: left;
+  }
+
+  .pText {
+    font-weight: 600;
+    justify-content: center;
+  }
+
+  .bText {
+    color: #000;
+  }
+
+  .form-field {
+    height: 900px;
+    width: 600px;
+  }
+
+  #id_reasons {
+    margin-left: auto;
+    margin-right: auto;
+    width: 55vw;
     height: 37vh;
     overflow-y: scroll;
-}
-#id_studnumber{
-  width: 100px;
-    height: 30px;
-    color: #000;
-}
-#id_lastname{
-  width: 100px;
-    height: 30px;
-    color: #000;
-}
-#id_firstname{
-  width: 100px;
-    height: 30px;
-    color: #000;
-}
-
-p{
-  font-size: 17px;
-  color: black;
-}
-.listTitle{
-  font-size: 20px;
-  text-align: center;
-}
-@media only screen and (max-width: 600px) {
-  .table-row {
-    font-size: 11px;
-  }
-}
-.fac{
-
-display: flex;
-align-items: center;
-justify-content: center;
-
-}
-
-.buttonF {
-  margin: 0;
-width: 420px;
-height: 55px;
-font-family: 'Roboto', sans-serif;
-font-size: 15px;
-text-transform: uppercase;
-letter-spacing: 2.5px;
-font-weight: 600;
-color: #fff;
-background-color: #d8c090;
-border: none;
-border-radius: 45px;
-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-transition: all 0.3s ease 0s;
-cursor: pointer;
-outline: none;
-}
-.fac{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
-}
-
-.buttonF {
-  position: fixed;
-width: 100%;
-min-width: 1320px;
-height: 60px;
-font-family: 'Roboto', sans-serif;
-font-size: 15px;
-text-transform: uppercase;
-letter-spacing: 2.5px;
-font-weight: 600;
-color: #fff;
-background-color: #d8c090;
-border: none;
-border-radius: 8px;
-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-transition: all 0.3s ease 0s;
-cursor: pointer;
-outline: none;
-  }
-#id_firstname{
-  width: 150px;
-}
-.wrap {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: auto;
-}
-
-.button {
-  margin: 0 auto;
-  width: 146px;
-  height: 35px;
-  font-family: 'Roboto', sans-serif;
-  font-size: 12px;
-  text-transform: uppercase;
-  letter-spacing: 2.5px;
-  font-weight: 500;
-  color: #000;
-  background-color: #fff;
-  border: none;
-  border-radius: 45px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease 0s;
-  cursor: pointer;
-  outline: none;
   }
 
-.button:hover {
-  background-color: #95B9C7;
-  box-shadow: 0px 15px 20px #C9C0BB;
-  color: #fff;
-  transform: translateY(-7px);
-}
-    .message {
+  #id_studnumber {
+    width: 100px;
+    height: 30px;
+    color: #000;
+  }
+
+  #id_lastname {
+    width: 100px;
+    height: 30px;
+    color: #000;
+  }
+
+  #id_firstname {
+    width: 100px;
+    height: 30px;
+    color: #000;
+  }
+
+  p {
+    font-size: 17px;
+    color: black;
+  }
+
+  .listTitle {
+    font-size: 20px;
+    text-align: center;
+  }
+
+  @media only screen and (max-width: 600px) {
+    .table-row {
+      font-size: 11px;
+    }
+  }
+
+  .fac {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+  }
+
+  .buttonF {
+    position: fixed;
+    width: 100%;
+    min-width: 1320px;
+    height: 60px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 600;
+    color: #fff;
+    background-color: #d8c090;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  }
+
+  #id_firstname {
+    width: 150px;
+  }
+
+  .wrap {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+  }
+
+  .button {
+    margin: 0 auto;
+    width: 146px;
+    height: 35px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
+    background-color: #fff;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  }
+
+  .button:hover {
+    background-color: #95B9C7;
+    box-shadow: 0px 15px 20px #C9C0BB;
+    color: #fff;
+    transform: translateY(-7px);
+  }
+
+  .message {
     margin: 0 auto;
     width: 390px;
     height: 45px;
@@ -193,74 +169,64 @@ outline: none;
     transition: all 0.3s ease 0s;
     cursor: pointer;
     outline: none;
-    }
-    .card1 {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 80%;
-  height: 730px;
-  border-radius: 5px;
-  background-color: var(--container-color); 
-  float: center;
-  margin-top: 10px;
-  margin-bottom: 35px;
-  margin-right: auto;
-  margin-left: auto;
-  text-align: center;
-  overflow-y: scroll;
-}
-.schedule-intro{
-  font-size: 18px;
-}
-#id_reasons{
-  font-size: 22px;
-}
-</style>
-  <div class="fac">
-    <button class="buttonF">Set Schedule for Counseling</button>
-  </div> 
-<br>
+  }
 
+  .card1 {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    width: 80%;
+    height: 730px;
+    border-radius: 5px;
+    background-color: var(--container-color);
+    float: center;
+    margin-top: 10px;
+    margin-bottom: 35px;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    overflow-y: scroll;
+  }
+
+  .schedule-intro {
+    font-size: 18px;
+  }
+
+  #id_reasons {
+    font-size: 22px;
+  }
+</style>
+<div class="fac">
+  <button class="buttonF">Set Schedule for Counseling</button>
+</div>
+<br>
 <div class="card1">
   <form action="#" class="cleanForm" method="POST">
-     
-<br>
-<div style="text-align: center">
-       {% for message in messages %}
-     <button type="submit" class="message"><b>{{message}} !</b></button>
-     {% endfor %}
-</div>
-     <br>
-        <div class="row">     
-<!-- <div class="students_information">
-            <p class="pText"><b class="bText">Student Number: &nbsp;</b>  {{schedform.studnumber}}</p> 
-          <p class="pText"><b class="bText" >Student's Last Name: &nbsp;</b> {{schedform.lastname}}</p> 
-          <p class="pText"><b class="bText" >Student's First Name: &nbsp;</b> {{schedform.firstname}}</p> 
-</div> -->
-
-<div class="schedule-intro">
-  Do you feel like sharing but doesn’t know where and whom to open up?
-Know that there are people who are always willing to listen to your problems. <br>Do not be afraid to open up because your COUNSELORS are just behind you. <br>
-	<br><b>SET YOUR SCHEDULE FOR FREE COUNSELING</b>
-	<br><b>ALWAYS REMEMBER, YOU ARE HEARD.</b>
-</div>
-<br>
-      <form method="POST" action=""> 
-            {% csrf_token %}
-           <i><h4 style="font-size: 18px; color: #4C4646; float: left; margin-left: 9.6em;" >Input the Reasons below to Set a Schedule for Referral:</h4> </i>
-           {{schedform.reasons}}
-           <br> <br>
-    <div class="wrap">
-      <button type="submit" class="button"><b>Submit</b></button>
-    </div>
-          </form>
-
+    <br>
+    <div style="text-align: center"> {% for message in messages %} <button type="submit" class="message">
+        <b>{{message}} !</b>
+      </button> {% endfor %} </div>
+    <br>
+    <div class="row">
+      <!-- <div class="students_information"><p class="pText"><b class="bText">Student Number: &nbsp;</b>  {{schedform.studnumber}}</p><p class="pText"><b class="bText" >Student's Last Name: &nbsp;</b> {{schedform.lastname}}</p><p class="pText"><b class="bText" >Student's First Name: &nbsp;</b> {{schedform.firstname}}</p></div> -->
+      <div class="schedule-intro"> Do you feel like sharing but doesn’t know where and whom to open up? Know that there are people who are always willing to listen to your problems. <br>Do not be afraid to open up because your COUNSELORS are just behind you. <br>
+        <br>
+        <b>SET YOUR SCHEDULE FOR FREE COUNSELING</b>
+        <br>
+        <b>ALWAYS REMEMBER, YOU ARE HEARD.</b>
+      </div>
+      <br>
+      <form method="POST" action=""> {% csrf_token %} <i>
+          <h4 style="font-size: 18px; color: #4C4646; float: left; margin-left: 9.6em;">Input the Reasons below to Set a Schedule for Referral:</h4>
+        </i>
+        {{schedform.reasons}}
+        <br>
+        <br>
+        <div class="wrap">
+          <button type="submit" class="button">
+            <b>Submit</b>
+          </button>
         </div>
- 
+      </form>
+    </div>
   </form>
-
-</div>
-
-   
-{% endblock %}
-  
+</div> {% endblock %}
