--- a/templates/teacher/list_students.html
+++ b/templates/teacher/list_students.html
@@ -1,231 +1,209 @@
-{% extends "teacher/teacher_home.html" %}
+{% extends "teacher/teacher_home.html" %} {% block title %} Students List {% endblock %} {% block content %} <style>
+  @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700,300,100);
 
-{% block title %} 
-   Students List
-{% endblock %} 
+  div.table-title {
+    display: block;
+    margin: auto;
+    max-width: 600px;
+    padding: 5px;
+    width: 100%;
+  }
 
-{% block content %} 
-<style>
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700,300,100);
+  .table-title h3 {
+    color: #fafafa;
+    font-size: 30px;
+    font-weight: 400;
+    font-style: normal;
+    font-family: "Roboto", helvetica, arial, sans-serif;
+    text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
+    text-transform: uppercase;
+  }
 
+  /*** Table Styles **/
+  .table-fill {
+    background: white;
+    border-radius: 3px;
+    border-collapse: collapse;
+    height: 7vh;
+    margin: auto;
+    max-width: 1200px;
+    padding: 5px;
+    width: 100%;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    animation: float 5s infinite;
+    border-radius: 10px;
+  }
 
-div.table-title {
-   display: block;
-  margin: auto;
-  max-width: 600px;
-  padding:5px;
-  width: 100%;
-}
+  th {
+    border-bottom: 4px solid #9ea7af;
+    border-right: 1px solid #343a45;
+    font-size: 23px;
+    font-weight: 100;
+    padding: 19px;
+    text-align: left;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+    vertical-align: middle;
+  }
 
-.table-title h3 {
-   color: #fafafa;
-   font-size: 30px;
-   font-weight: 400;
-   font-style:normal;
-   font-family: "Roboto", helvetica, arial, sans-serif;
-   text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
-   text-transform:uppercase;
-}
+  th:first-child {
+    border-top-left-radius: 3px;
+  }
 
+  th:last-child {
+    border-top-right-radius: 3px;
+    border-right: none;
+  }
 
-/*** Table Styles **/
+  tr {
+    border-top: 1px solid #C1C3D1;
+    border-bottom: 1px solid #C1C3D1;
+    color: #666B85;
+    font-size: 16px;
+    font-weight: normal;
+    text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
+  }
 
-.table-fill {
-  background: white;
-  border-radius:3px;
-  border-collapse: collapse;
-  height: 100px;
-  margin: auto;
-  max-width: 1200px;
-  padding:5px;
-  width: 100%;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-  animation: float 5s infinite;
-}
- 
-th {
- 
-
-  border-bottom:4px solid #9ea7af;
-  border-right: 1px solid #343a45;
-  font-size:23px;
-  font-weight: 100;
-  padding: 19px;
-  text-align:left;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-  vertical-align:middle;
-}
-
-th:first-child {
-  border-top-left-radius:3px;
-}
- 
-th:last-child {
-  border-top-right-radius:3px;
-  border-right:none;
-}
-  
-tr {
-  border-top: 1px solid #C1C3D1;
-  border-bottom: 1px solid #C1C3D1;
-  color:#666B85;
-  font-size:16px;
-  font-weight:normal;
-  text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
-}
- 
-/* tr:hover td {
+  /* tr:hover td {
   background:#4E5066;
   color:#FFFFFF;
   border-top: 1px solid #22262e;
 } */
- 
-tr:first-child {
- border-top: 1px solid #C1C3D1;
-}
-
-tr:last-child {
- border-bottom: 1px solid #C1C3D1;
-}
- 
-tr:nth-child(odd) td {
-  background:#EBEBEB;
-}
- 
-/* tr:nth-child(odd):hover td {
-  background:#4E5066;
-} */
-
-tr:last-child td:first-child {
-  border-bottom-left-radius:3px;
-}
- 
-tr:last-child td:last-child {
-  border-bottom-right-radius:3px;
-}
- 
-td {
-  background:#FFFFFF;
-  padding:20px;
-  text-align:left;
-  vertical-align:middle;
-
-  font-weight:300;
-  font-size:18px;
-  text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
-  border-right: 1px solid #C1C3D1;
-}
-
-td:last-child {
-  border-right: 0px;
-}
-
-th.text-left {
-  text-align: left;
-}
-
-th.text-center {
-  text-align: center;
-}
-
-th.text-right {
-  text-align: right;
-}
-
-td.text-left {
-  text-align: left;
-}
-
-td.text-center {
-  text-align: center;
-}
-
-td.text-right {
-  text-align: right;
-}
-.button {
-  margin: 0 auto;
-  width: 9vw;
-  height: 30px;
-  font-family: 'Roboto', sans-serif;
-  font-size: 12px;
-  text-transform: uppercase;
-  letter-spacing: 2.5px;
-  font-weight: 500;
-  color: #000;
-  background-color: #fff;
-  border: none;
-  border-radius: 45px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease 0s;
-  cursor: pointer;
-  outline: none;
+  tr:first-child {
+    border-top: 1px solid #C1C3D1;
   }
 
-.button:hover {
-  background-color: #95B9C7;
-  box-shadow: 0px 15px 20px #C9C0BB;
-  color: #fff;
-  transform: translateY(-7px);
-}
-.buttonF {
-  position: fixed;
-width: 100%;
-min-width: 1320px;
-height: 60px;
-font-family: 'Roboto', sans-serif;
-font-size: 15px;
-text-transform: uppercase;
-letter-spacing: 2.5px;
-font-weight: 600;
-color: #fff;
-background-color: #d8c090;
-border: none;
-border-radius: 8px;
-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-transition: all 0.3s ease 0s;
-cursor: pointer;
-outline: none;
-}
+  tr:last-child {
+    border-bottom: 1px solid #C1C3D1;
+  }
 
+  tr:nth-child(odd) td {
+    background: #EBEBEB;
+  }
 
+  /* tr:nth-child(odd):hover td {
+  background:#4E5066;
+} */
+  tr:last-child td:first-child {
+    border-bottom-left-radius: 3px;
+  }
+
+  tr:last-child td:last-child {
+    border-bottom-right-radius: 3px;
+  }
+
+  td {
+    background: #FFFFFF;
+    padding: 20px;
+    text-align: left;
+    vertical-align: middle;
+    font-weight: 300;
+    font-size: 16px;
+    text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
+    border-right: 1px solid #C1C3D1;
+  }
+
+  td:last-child {
+    border-right: 0px;
+  }
+
+  th.text-left {
+    text-align: left;
+  }
+
+  th.text-center {
+    text-align: center;
+  }
+
+  th.text-right {
+    text-align: right;
+  }
+
+  td.text-left {
+    text-align: left;
+  }
+
+  td.text-center {
+    text-align: center;
+  }
+
+  td.text-right {
+    text-align: right;
+  }
+
+  .button {
+    margin: 0 auto;
+    width: 9vw;
+    height: 30px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
+    background-color: #fff;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  }
+
+  .button:hover {
+    background-color: #95B9C7;
+    box-shadow: 0px 15px 20px #C9C0BB;
+    color: #fff;
+    transform: translateY(-7px);
+  }
+
+  .buttonF {
+    position: fixed;
+    width: 100%;
+    min-width: 1320px;
+    height: 60px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 600;
+    color: #fff;
+    background-color: #d8c090;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  }
 </style>
-    <div class="fac">
-    <button type="submit" class="buttonF">List of Students </button>
-  </div> 
-  <br> <br>
-            <div style="padding: 2px;">
-      {% if not object_list %}
-<center><p style="font-size: 18px;"><b>No Data Available</b></p></center>
-         {% endif %}  
-  </div>
-        <br>
-
+<div class="fac">
+  <button type="submit" class="buttonF">List of Students </button>
+</div>
+<br>
+<br>
+<div style="padding: 2px;"></div>
+<br>
 <br>
 <table class="table-fill">
-<thead>
-<tr>
-<th class="text-center">ID Number</th>
-<th class="text-center">Student</th>
-<th class="text-center">Actions</th>
-</tr>
-</thead>
-  {% for object in object_list %}
-
-    <tbody class="table-hover">
-<tr>
-<td class="text-left">{{object.studnumber}}</td>
-<td class="text-left">{{object.firstname}}, &nbsp; {{object.lastname}}</td>
-<td class="text-center"><a href="{% url 'new' object.studnumber id %}"><button type="submit" class="button">Refer Student</button></a></td>
-
-</tr>
-</tbody>
-
-
-
-{% endfor %} 
-</table>
-
-{% endblock %}
-
-    
+  <thead>
+    <tr>
+      <th class="text-center">ID Number</th>
+      <th class="text-center">Student</th>
+      <th class="text-center">Actions</th>
+    </tr>
+  </thead> {% for object in object_list %} <tbody class="table-hover">
+    <tr>
+      <td class="text-left">{{object.studnumber}}</td>
+      <td class="text-left">{{object.firstname}}, &nbsp; {{object.lastname}}</td>
+      <td class="text-center">
+        <a href="{% url 'new' object.studnumber id %}">
+          <button type="submit" class="button">Refer Student</button>
+        </a>
+      </td>
+    </tr>
+  </tbody> {% endfor %}
+</table> {% if not object_list %} <center>
+  <p style="font-size: 20px;">
+    <b>No Data Available</b>
+  </p>
+</center> {% endif %} {% endblock %}
