--- a/templates/admin/upload_faculty.html
+++ b/templates/admin/upload_faculty.html
@@ -1,84 +1,84 @@
-{% extends "admin/admin_home.html" %}
-{% block title %} Upload Faculty {% endblock %}
-{% block content %}
-
-<style>
-.faculty{
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 50%;
-  height: 320px;
-  border-radius: 5px;
-  background-color: #98b4ac;
-  float: center;
-  margin: auto;
-   line-height: 40px; 
-}
-.wrap {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: auto;
-}
-
-.button {
-  margin: 0 auto;
-  width: 140px;
-  height: 30px;
-  font-family: 'Roboto', sans-serif;
-  font-size: 12px;
-  text-transform: uppercase;
-  letter-spacing: 2.5px;
-  font-weight: 500;
-  color: #000;
-  background-color: #fff;
-  border: none;
-  border-radius: 45px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease 0s;
-  cursor: pointer;
-  outline: none;
+{% extends "admin/admin_home.html" %} {% block title %} Upload Faculty {% endblock %} {% block content %} <style>
+  .faculty {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    width: 50%;
+    height: 320px;
+    border-radius: 5px;
+    background-color: #98b4ac;
+    float: center;
+    margin: auto;
+    line-height: 40px;
   }
 
-.button:hover {
-  background-color: #95B9C7;
-  box-shadow: 0px 15px 20px #C9C0BB;
-  color: #fff;
-  transform: translateY(-7px);
-}
-.fac{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
-}
-
-.buttonF {
-  position: fixed;
-  width: 100%;
-  min-width: 1320px;
-  height: 60px;
-  font-family: 'Roboto', sans-serif;
-  font-size: 15px;
-  text-transform: uppercase;
-  letter-spacing: 2.5px;
-  font-weight: 600;
-  color: #fff;
-  background-color: #d8c090;
-  border: none;
-  border-radius: 8px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease 0s;
-  cursor: pointer;
-  outline: none;
+  .wrap {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
   }
-  .input{
+
+  .button {
+    margin: 0 auto;
+    width: 140px;
+    height: 30px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
+    background-color: #fff;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  }
+
+  .button:hover {
+    background-color: #95B9C7;
+    box-shadow: 0px 15px 20px #C9C0BB;
+    color: #fff;
+    transform: translateY(-7px);
+  }
+
+  .fac {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+  }
+
+  .buttonF {
+    position: fixed;
+    width: 100%;
+    min-width: 1320px;
+    height: 60px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 600;
+    color: #fff;
+    background-color: #d8c090;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  }
+
+  .input {
     margin: 0 auto;
     height: 30px;
     font-weight: 500;
   }
-    .message {
+
+  .message {
     margin: 0 auto;
     width: 300px;
     height: 45px;
@@ -95,36 +95,37 @@
     transition: all 0.3s ease 0s;
     cursor: pointer;
     outline: none;
-    }
-.parent_message{
+  }
+
+  .parent_message {
     float: center;
     margin-left: auto;
     margin-right: auto;
-}
-
+  }
 </style>
 <div class="fac">
-  <button type="submit" class="buttonF"><b>Upload Faculty</b></button>
-</div> 
-<br> <br>
-<div style="text-align: center">
-       {% for message in messages %}
-     <button type="submit" class="message"><p><b>{{message}} !</b></p></button>
-     {% endfor %}
+  <button type="submit" class="buttonF">
+    <b>Upload Faculty</b>
+  </button>
 </div>
-     <br> <br> 
-<div class="faculty">
 <br>
-  <form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <center><input type="file" name="myfile" class="input" style="font-size: 17.5px; font-weight: bold;"></center>
-   <br> <br>
+<br>
+<div style="text-align: center"> {% for message in messages %} <button type="submit" class="message">
+    <p>
+      <b>{{message}} !</b>
+    </p>
+  </button> {% endfor %} </div>
+<br>
+<br>
+<div class="faculty">
+  <br>
+  <form method="post" enctype="multipart/form-data"> {% csrf_token %} <center>
+      <input type="file" name="myfile" class="input" style="font-size: 17.5px; font-weight: bold;">
+    </center>
+    <br>
+    <br>
     <div class="wrap">
       <button type="submit" class="button">Upload</button>
     </div>
   </form>
-</div>
-
-  {% endblock %}
-
-  
+</div> {% endblock %}
