--- a/templates/admin/view_enrolled_students_via_degree.html
+++ b/templates/admin/view_enrolled_students_via_degree.html
@@ -1,21 +1,11 @@
-{% extends "admin/admin_home.html" %}
-
-{% block title %} 
-View Department
-{% endblock %} 
-
-
-{% block content %} 
-<style>
-
-/* Table Styles */
-
-.table-wrapper{
+{% extends "admin/admin_home.html" %} {% block title %} View Department {% endblock %} {% block content %} <style>
+  /* Table Styles */
+  .table-wrapper {
     margin: 10px 70px 70px;
-    box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
-}
+    box-shadow: 0px 35px 50px rgba(0, 0, 0, 0.2);
+  }
 
-.fl-table {
+  .fl-table {
     border-radius: 5px;
     font-size: 12px;
     font-weight: normal;
@@ -26,166 +16,183 @@ View Department
     white-space: nowrap;
     background-color: white;
     overflow-y: scroll;
-}
+  }
 
-.fl-table td, .fl-table th {
+  .fl-table td,
+  .fl-table th {
     text-align: center;
     padding: 8px;
-}
+  }
 
-.fl-table td {
+  .fl-table td {
     border-right: 1px solid #f8f8f8;
     font-size: 12px;
-}
+  }
 
-.fl-table thead th {
+  .fl-table thead th {
     color: #ffffff;
     background: #98b4ac;
-}
+  }
 
-.fl-table thead th:nth-child(odd) {
+  .fl-table thead th:nth-child(odd) {
     color: #ffffff;
     background: #98b4ac;
-}
+  }
 
-.fl-table tr:nth-child(even) {
+  .fl-table tr:nth-child(even) {
     background: #F8F8F8;
-}
+  }
 
-/* Responsive */
-
-@media (max-width: 767px) {
+  /* Responsive */
+  @media (max-width: 767px) {
     .fl-table {
-        display: block;
-        width: 100%;
+      display: block;
+      width: 100%;
     }
-    .table-wrapper:before{
-        content: "Scroll horizontally >";
-        display: block;
-        text-align: right;
-        font-size: 11px;
-        color: white;
-        padding: 0 0 10px;
+
+    .table-wrapper:before {
+      content: "Scroll horizontally >";
+      display: block;
+      text-align: right;
+      font-size: 11px;
+      color: white;
+      padding: 0 0 10px;
     }
-    .fl-table thead, .fl-table tbody, .fl-table thead th {
-        display: block;
-    }
-    .fl-table thead th:last-child{
-        border-bottom: none;
-    }
-    .fl-table thead {
-        float: left;
-    }
-    .fl-table tbody {
-        width: auto;
-        position: relative;
-        overflow-x: auto;
-    }
-    .fl-table td, .fl-table th {
-        padding: 20px .625em .625em .625em;
-        height: 60px;
-        vertical-align: middle;
-        box-sizing: border-box;
-        overflow-x: hidden;
-        overflow-y: auto;
-        width: 120px;
-        font-size: 13px;
-        text-overflow: ellipsis;
-    }
+
+    .fl-table thead,
+    .fl-table tbody,
     .fl-table thead th {
-        text-align: left;
-        border-bottom: 1px solid #f7f7f9;
+      display: block;
     }
+
+    .fl-table thead th:last-child {
+      border-bottom: none;
+    }
+
+    .fl-table thead {
+      float: left;
+    }
+
+    .fl-table tbody {
+      width: auto;
+      position: relative;
+      overflow-x: auto;
+    }
+
+    .fl-table td,
+    .fl-table th {
+      padding: 20px .625em .625em .625em;
+      height: 60px;
+      vertical-align: middle;
+      box-sizing: border-box;
+      overflow-x: hidden;
+      overflow-y: auto;
+      width: 120px;
+      font-size: 13px;
+      text-overflow: ellipsis;
+    }
+
+    .fl-table thead th {
+      text-align: left;
+      border-bottom: 1px solid #f7f7f9;
+    }
+
     .fl-table tbody tr {
-        display: table-cell;
+      display: table-cell;
     }
+
     .fl-table tbody tr:nth-child(odd) {
-        background: none;
+      background: none;
     }
+
     .fl-table tr:nth-child(even) {
-        background: transparent;
+      background: transparent;
     }
+
     .fl-table tr td:nth-child(odd) {
-        background: #F8F8F8;
-        border-right: 1px solid #E6E4E4;
+      background: #F8F8F8;
+      border-right: 1px solid #E6E4E4;
     }
+
     .fl-table tr td:nth-child(even) {
-        border-right: 1px solid #E6E4E4;
+      border-right: 1px solid #E6E4E4;
     }
+
     .fl-table tbody td {
-        display: block;
-        text-align: center;
+      display: block;
+      text-align: center;
     }
-}
-.fac{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
-}
+  }
 
-.buttonF {
-  position: fixed;
+  .fac {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+  }
 
-width: 100%;
-min-width: 1320px;
-height: 60px;
-font-family: 'Roboto', sans-serif;
-font-size: 15px;
-text-transform: uppercase;
-letter-spacing: 2.5px;
-font-weight: 600;
-color: #fff;
-background-color: #d8c090;
-border: none;
-border-radius: 8px;
-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-transition: all 0.3s ease 0s;
-cursor: pointer;
-outline: none;
-}
-.program{
-  font-size: 16px;
-  color: #000000;
-  
-}
-.list{
-  font-size: 18px;
-}
-.parent_program{
- text-align: left; border: solid 1px #DDEEEE;
-color: #333;
-padding: 10px;
-text-shadow: 1px 1px 1px #fff;
-}
-    tr:hover {
-          background-color: #E6E4E4;
-        }
+  .buttonF {
+    position: fixed;
+    width: 100%;
+    min-width: 1320px;
+    height: 60px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 600;
+    color: #fff;
+    background-color: #d8c090;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  }
+
+  .program {
+    font-size: 16px;
+    color: #000000;
+  }
+
+  .list {
+    font-size: 18px;
+  }
+
+  .parent_program {
+    text-align: left;
+    border: solid 1px #DDEEEE;
+    color: #333;
+    padding: 10px;
+    text-shadow: 1px 1px 1px #fff;
+  }
+
+  tr:hover {
+    background-color: #E6E4E4;
+  }
 </style>
-
 <div class="fac">
-    <button type="submit" class="buttonF">Departments</button>
-  </div> 
-  <br> <br>
+  <button type="submit" class="buttonF">Departments</button>
+</div>
+<br>
+<br>
 <div class="table-wrapper">
   <table class="fl-table">
-      <thead>
+    <thead>
       <tr>
-            <th class="list" >Program Code</th>
-          <th class="list"  style="text-align: left; margin: 100px">List of Departments</th>
+        <th class="list">Program Code</th>
+        <th class="list" style="text-align: left; margin: 100px">List of Departments</th>
       </tr>
-      </thead>
-      {% for form in degree %}
-      <tbody>
+    </thead> {% for form in degree %} <tbody>
       <tr>
-          <td class="parent_program" style="font-size: 15px;" ><b>{{form.program_code}}</b></td> 
-          <td class="parent_program" style="text-align: left;" ><a href="{% url 'view_enrolled_students' form.program_id %}" class="program"> {{form.program_name}} </a></td>
+        <td class="parent_program" style="font-size: 15px;">
+          <b>{{form.program_code}}</b>
+        </td>
+        <td class="parent_program" style="text-align: left;">
+          <a href="{% url 'view_enrolled_students' form.program_id %}" class="program"> {{form.program_name}} </a>
+        </td>
       </tr>
-    </tbody>
-        {% endfor %}
+    </tbody> {% endfor %}
   </table>
-</div>
-
-
-{% endblock %}
-
+</div> {% endblock %}
