--- a/templates/admin/view_schooloffices.html
+++ b/templates/admin/view_schooloffices.html
@@ -1,100 +1,89 @@
-{% extends "admin/admin_home.html" %}
-
-{% block title %} 
-View School Offices 
-{% endblock %} 
-
-
-{% block content %} 
-<style>
+{% extends "admin/admin_home.html" %} {% block title %} View School Offices {% endblock %} {% block content %} <style>
   tr {
     border-top: 1px solid #C1C3D1;
     border-bottom: 1px solid #C1C3D1;
-    color:#504A4B;
-    font-size:16px;
-    font-weight:normal;
+    color: #504A4B;
+    font-size: 16px;
+    font-weight: normal;
     text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
-  
   }
-   
+
   tr:hover td {
-    background:#4863A0;
-    color:#4863A0;
+    background: #4863A0;
+    color: #4863A0;
     border-top: 1px solid #4863A0;
   }
-   
+
   tr:first-child {
-    border-top:none;
+    border-top: none;
   }
-  
+
   tr:last-child {
-    border-bottom:none;
+    border-bottom: none;
   }
-   
+
   tr:nth-child(odd) td {
-    background:#EBEBEB;
+    background: #EBEBEB;
   }
-   
+
   tr:nth-child(odd):hover td {
-    background:#C1C3D1;
+    background: #C1C3D1;
   }
-  
+
   tr:last-child td:first-child {
-    border-bottom-left-radius:3px;
+    border-bottom-left-radius: 3px;
   }
-   
+
   tr:last-child td:last-child {
-    border-bottom-right-radius:3px;
+    border-bottom-right-radius: 3px;
   }
-   
+
   td {
-    background:#FFFFFF;
+    background: #FFFFFF;
     padding: 10px;
-    text-align:left;
-    vertical-align:middle;
-    font-weight:300;
-    font-size:18px;
+    text-align: left;
+    vertical-align: middle;
+    font-weight: 300;
+    font-size: 18px;
     text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
     border-right: 1px solid #C1C3D1;
-   
   }
-  
+
   td:last-child {
     border-right: 0px;
   }
-  
+
   th.text-left {
     text-align: left;
   }
-  
+
   th.text-center {
     text-align: center;
   }
-  
+
   th.text-right {
     text-align: right;
   }
-  
+
   td.text-left {
     text-align: center;
   }
-  
+
   td.text-center {
     text-align: center;
   }
-  
+
   td.text-right {
     text-align: right;
   }
-  .facDay{
-    
+
+  .facDay {
     display: flex;
     align-items: left;
     justify-content: left;
-    
-    }
-    
-    .buttonDay {
+  }
+
+  .buttonDay {
     width: 320px;
     height: 55px;
     font-family: 'Roboto', sans-serif;
@@ -111,39 +100,41 @@ View School Offices
     cursor: pointer;
     outline: none;
     margin-left: 10px;
-    }
-    .fac{
+  }
+
+  .fac {
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 20px;
   }
-  
+
   .buttonF {
     position: fixed;
-  width: 100%;
-  min-width: 1320px;
-  height: 60px;
-  font-family: 'Roboto', sans-serif;
-  font-size: 15px;
-  text-transform: uppercase;
-  letter-spacing: 2.5px;
-  font-weight: 600;
-  color: #fff;
-  background-color: #d8c090;
-  border: none;
-  border-radius: 8px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease 0s;
-  cursor: pointer;
-  outline: none;
+    width: 100%;
+    min-width: 1320px;
+    height: 60px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 600;
+    color: #fff;
+    background-color: #d8c090;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
   }
-  #id_pickedDate{
+
+  #id_pickedDate {
     width: 250px;
     height: 35px;
     color: #3A3B3C;
   }
-  
+
   .button {
     margin: 0 auto;
     width: 96px;
@@ -161,193 +152,205 @@ View School Offices
     transition: all 0.3s ease 0s;
     cursor: pointer;
     outline: none;
-    }
-  
-    .button:hover {
+  }
+
+  .button:hover {
     background-color: #95B9C7;
     box-shadow: 0px 15px 20px #C9C0BB;
     color: #fff;
   }
-  
+
   /* Table Styles */
-  
-  .table-wrapper{
-      margin: 10px 70px 70px;
-      box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
+  .table-wrapper {
+    margin: 10px 70px 70px;
+    box-shadow: 0px 35px 50px rgba(0, 0, 0, 0.2);
   }
-  
+
   .fl-table {
-      border-radius: 5px;
-      font-size: 12px;
-      font-weight: normal;
-      border: none;
-      border-collapse: collapse;
-      width: 100%;
-      max-width: 100%;
-      white-space: nowrap;
-      background-color: white;
-      overflow-y: scroll;
+    border-radius: 5px;
+    font-size: 12px;
+    font-weight: normal;
+    border: none;
+    border-collapse: collapse;
+    width: 100%;
+    max-width: 100%;
+    white-space: nowrap;
+    background-color: white;
+    overflow-y: scroll;
   }
-  
-  .fl-table td, .fl-table th {
-      text-align: center;
-      padding: 8px;
+
+  .fl-table td,
+  .fl-table th {
+    text-align: center;
+    padding: 8px;
   }
-  
+
   .fl-table td {
-      border-right: 1px solid #f8f8f8;
-      font-size: 12px;
+    border-right: 1px solid #f8f8f8;
+    font-size: 12px;
   }
-  
+
   .fl-table thead th {
-      color: #ffffff;
-      background: #98b4ac;
+    color: #ffffff;
+    background: #98b4ac;
   }
-  
+
   .fl-table thead th:nth-child(odd) {
-      color: #ffffff;
-      background: #98b4ac;
+    color: #ffffff;
+    background: #98b4ac;
   }
-  
+
   .fl-table tr:nth-child(even) {
-      background: #F8F8F8;
+    background: #F8F8F8;
   }
-  
+
   /* Responsive */
-  
   @media (max-width: 767px) {
-      .fl-table {
-          display: block;
-          width: 100%;
-      }
-      .table-wrapper:before{
-          content: "Scroll horizontally >";
-          display: block;
-          text-align: right;
-          font-size: 11px;
-          color: white;
-          padding: 0 0 10px;
-      }
-      .fl-table thead, .fl-table tbody, .fl-table thead th {
-          display: block;
-      }
-      .fl-table thead th:last-child{
-          border-bottom: none;
-      }
-      .fl-table thead {
-          float: left;
-      }
-      .fl-table tbody {
-          width: auto;
-          position: relative;
-          overflow-x: auto;
-      }
-      .fl-table td, .fl-table th {
-          padding: 20px .625em .625em .625em;
-          height: 60px;
-          vertical-align: middle;
-          box-sizing: border-box;
-          overflow-x: hidden;
-          overflow-y: auto;
-          width: 120px;
-          font-size: 13px;
-          text-overflow: ellipsis;
-      }
-      .fl-table thead th {
-          text-align: left;
-          border-bottom: 1px solid #f7f7f9;
-      }
-      .fl-table tbody tr {
-          display: table-cell;
-      }
-      .fl-table tbody tr:nth-child(odd) {
-          background: none;
-      }
-      .fl-table tr:nth-child(even) {
-          background: transparent;
-      }
-      .fl-table tr td:nth-child(odd) {
-          background: #F8F8F8;
-          border-right: 1px solid #E6E4E4;
-      }
-      .fl-table tr td:nth-child(even) {
-          border-right: 1px solid #E6E4E4;
-      }
-      .fl-table tbody td {
-          display: block;
-          text-align: center;
-      }
+    .fl-table {
+      display: block;
+      width: 100%;
+    }
+
+    .table-wrapper:before {
+      content: "Scroll horizontally >";
+      display: block;
+      text-align: right;
+      font-size: 11px;
+      color: white;
+      padding: 0 0 10px;
+    }
+
+    .fl-table thead,
+    .fl-table tbody,
+    .fl-table thead th {
+      display: block;
+    }
+
+    .fl-table thead th:last-child {
+      border-bottom: none;
+    }
+
+    .fl-table thead {
+      float: left;
+    }
+
+    .fl-table tbody {
+      width: auto;
+      position: relative;
+      overflow-x: auto;
+    }
+
+    .fl-table td,
+    .fl-table th {
+      padding: 20px .625em .625em .625em;
+      height: 60px;
+      vertical-align: middle;
+      box-sizing: border-box;
+      overflow-x: hidden;
+      overflow-y: auto;
+      width: 120px;
+      font-size: 13px;
+      text-overflow: ellipsis;
+    }
+
+    .fl-table thead th {
+      text-align: left;
+      border-bottom: 1px solid #f7f7f9;
+    }
+
+    .fl-table tbody tr {
+      display: table-cell;
+    }
+
+    .fl-table tbody tr:nth-child(odd) {
+      background: none;
+    }
+
+    .fl-table tr:nth-child(even) {
+      background: transparent;
+    }
+
+    .fl-table tr td:nth-child(odd) {
+      background: #F8F8F8;
+      border-right: 1px solid #E6E4E4;
+    }
+
+    .fl-table tr td:nth-child(even) {
+      border-right: 1px solid #E6E4E4;
+    }
+
+    .fl-table tbody td {
+      display: block;
+      text-align: center;
+    }
   }
+
   .center {
-  
-  text-align: center;
+    text-align: center;
   }
-  
+
   .center_title {
-  
-  text-align: center;
-  margin-right: 20px;
+    text-align: center;
+    margin-right: 20px;
   }
-  
+
   .wrap {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: auto;
-}
-
-.button {
-  margin: 0 auto;
-  width: 140px;
-  height: 30px;
-  font-family: 'Roboto', sans-serif;
-  font-size: 12px;
-  text-transform: uppercase;
-  letter-spacing: 2.5px;
-  font-weight: 500;
-  color: #000;
-  background-color: whitesmoke;
-  border: none;
-  border-radius: 45px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease 0s;
-  cursor: pointer;
-  outline: none;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
   }
 
-.button:hover {
-  background-color: #95B9C7;
-  box-shadow: 0px 15px 20px #C9C0BB;
-  color: #fff;
-  transform: translateY(-7px);
-}
-.table_words{
-  font-size: 15px;
-  text-align: left;
-  align-items: center;
-  margin-left: 285px;
-}
+  .button {
+    margin: 0 auto;
+    width: 140px;
+    height: 30px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
+    background-color: whitesmoke;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  }
 
-.flex-container {
+  .button:hover {
+    background-color: #95B9C7;
+    box-shadow: 0px 15px 20px #C9C0BB;
+    color: #fff;
+    transform: translateY(-7px);
+  }
+
+  .table_words {
+    font-size: 15px;
+    text-align: left;
+    align-items: center;
+    margin-left: 285px;
+  }
+
+  .flex-container {
     display: flex;
-background-color: #C0C0C0;
+    background-color: #C0C0C0;
+    min-height: 215px;
+    border-radius: 5px;
+    transition: 0.3s;
+  }
 
-min-height: 215px;
-  border-radius: 5px;
-
-  transition: 0.3s;
-
-
-}
-
-.flex-child {
+  .flex-child {
     flex: 1;
-}  
+  }
 
-.flex-child:first-child {
+  .flex-child:first-child {
     margin-right: 200px;
-} 
+  }
+
   .message {
     margin: 0 auto;
     width: 257px;
@@ -365,98 +368,85 @@ min-height: 215px;
     transition: all 0.3s ease 0s;
     cursor: pointer;
     outline: none;
-    }
+  }
 
-    #id_school_code{
-  width: 200px;
-  height: 25px;
-  color: #3A3B3C;
-  border-radius: 5px;
-  font-size: 15px;
-    }
-    #id_school_office_name{
-  width: 200px;
-  height: 25px;
-  color: #3A3B3C;
-  border-radius: 5px;
-  font-size: 15px; 
-    }
+  #id_school_code {
+    width: 200px;
+    height: 25px;
+    color: #3A3B3C;
+    border-radius: 5px;
+    font-size: 15px;
+  }
 
-    #id_schoolform_code{
-  width: 200px;
-  height: 25px;
-  color: #3A3B3C;
-  border-radius: 5px;
-  font-size: 15px; 
-    }
+  #id_school_office_name {
+    width: 200px;
+    height: 25px;
+    color: #3A3B3C;
+    border-radius: 5px;
+    font-size: 15px;
+  }
 
+  #id_schoolform_code {
+    width: 200px;
+    height: 25px;
+    color: #3A3B3C;
+    border-radius: 5px;
+    font-size: 15px;
+  }
 </style>
-
 <div class="fac">
   <button type="submit" class="buttonF">SCHOOL OFFICES</button>
-</div> 
+</div>
 <br>
-
 <div class="flex-container">
-
   <div class="flex-child magenta" style="margin-left: 130px;">
-    <form method="POST" action="{% url 'view_schooloffices' %}">
-          {% csrf_token %}
-
-          <h3>Adding School Offices</h3>
-          <p><i style="font-size: 18px;">Input Code:</i> &nbsp; &nbsp; &nbsp; &nbsp;{{ addschoolForm.school_code }}</p>
-          <p><i style="font-size: 18px;">Input School:</i> &nbsp; &nbsp; {{ addschoolForm.school_office_name }}</p>
-                <button type="submit" class="button">Submit</button>
-      </form>
-                       <div style="margin-left: 500px; font-size: 16.3px;">
-             {% for message in messages %}
-     <button type="submit" class="message"><p><b>{{message}} !</b></p></button>
-     {% endfor %}
-</div>
+    <form method="POST" action="{% url 'view_schooloffices' %}"> {% csrf_token %} <h3>Adding School Offices</h3>
+      <p>
+        <i style="font-size: 18px;">Input Code:</i> &nbsp; &nbsp; &nbsp; &nbsp;{{ addschoolForm.school_code }}
+      </p>
+      <p>
+        <i style="font-size: 18px;">Input School:</i> &nbsp; &nbsp; {{ addschoolForm.school_office_name }}
+      </p>
+      <button type="submit" class="button">Submit</button>
+    </form>
+    <div style="margin-left: 500px; font-size: 16.3px;"> {% for message in messages %} <button type="submit" class="message">
+        <p>
+          <b>{{message}} !</b>
+        </p>
+      </button> {% endfor %} </div>
   </div>
- 
-
   <div class="flex-child green">
-    <form method="POST" action="{% url 'view_schooloffices' %}">
-          {% csrf_token %}
-
-          <h3>Deleting School Offices</h3>
-          <p><i style="font-size: 18px;">Input School Code to Delete School Office:</i> &nbsp; {{ deleteschoolForm.schoolform_code }}</p>
-          <button type="submit" class="button">Submit</button>
-      </form>
+    <form method="POST" action="{% url 'view_schooloffices' %}"> {% csrf_token %} <h3>Deleting School Offices</h3>
+      <p>
+        <i style="font-size: 18px;">Input School Code to Delete School Office:</i> &nbsp; {{ deleteschoolForm.schoolform_code }}
+      </p>
+      <button type="submit" class="button">Submit</button>
+    </form>
   </div>
-  
 </div>
-
- <br>
-
+<br>
 <div class="table-wrapper">
   <table class="fl-table">
-      <thead>
+    <thead>
       <tr>
-          <th class="table_head">List of School Offices</th>
-          <th class="table_head">List of School Code</th>
+        <th class="table_head">List of School Offices</th>
+        <th class="table_head">List of School Code</th>
       </tr>
-      </thead>
-      {% for form in school %}
-      <tbody>
-        <tr>
-            <td  style="font-size: 15px;" class="table_words"><a style="color: #504A4B" href="#"><b>{{form.school_office_name}}</b>
-               <td  style="font-size: 15px;" class="table_words"><a style="color: #504A4B" href="#"><b>{{form.school_code}}</b>
-  </a> <br></td>
-
-        
+    </thead> {% for form in school %} <tbody>
+      <tr>
+        <td style="font-size: 15px;" class="table_words">
+          <a style="color: #504A4B" href="#">
+            <b>{{form.school_office_name}}</b>
+        <td style="font-size: 15px;" class="table_words">
+          <a style="color: #504A4B" href="#">
+            <b>{{form.school_code}}</b>
+          </a>
+          <br>
+        </td>
       </tr>
-      <tbody>
-        {% endfor %}
+    <tbody> {% endfor %}
   </table>
 </div>
-
-
-
-
-<br><br><br>
-
-
-
-{% endblock %}
+<br>
+<br>
+<br> {% endblock %}
