--- a/templates/counselor/view_another_feedback.html
+++ b/templates/counselor/view_another_feedback.html
@@ -1,169 +1,176 @@
-{% extends "counselor/counselor_home.html" %}
-
-{% block title %} 
-View Another Feedback
-{% endblock %} 
-
-{% block content %} 
-
-<style>
-   
-  .modal{
-  font-size: 19px;
+{% extends "counselor/counselor_home.html" %} {% block title %} View Another Feedback {% endblock %} {% block content %} <style>
+  .modal {
+    font-size: 19px;
   }
-  .container{
-  border-radius: 10px;
-  background-color: #B4CFEC;
-  box-shadow:
-  0 9px 33px rgba(0, 0, 0, 0.07);
-  width: 1200px;
-  height: 400px;
-  float: center;
-  margin-left: 15px;
+
+  .container {
+    border-radius: 10px;
+    background-color: #B4CFEC;
+    box-shadow:
+      0 9px 33px rgba(0, 0, 0, 0.07);
+    width: 1200px;
+    height: 400px;
+    float: center;
+    margin-left: 15px;
   }
-  
-  
-  .fac{
+
+  .fac {
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 20px;
   }
-  
+
   .buttonF {
     position: fixed;
-  width: 100%;
-  min-width: 1320px;
-  height: 60px;
-  font-family: 'Roboto', sans-serif;
-  font-size: 15px;
-  text-transform: uppercase;
-  letter-spacing: 2.5px;
-  font-weight: 600;
-  color: #fff;
-  background-color: #d8c090;
-  border: none;
-  border-radius: 8px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease 0s;
-  cursor: pointer;
-  outline: none;
-    }
-  
-    /* Table Styles */
-  
-  .table-wrapper{
-      margin: 10px 70px 70px;
-      box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
-  }
-  
-  .fl-table {
-      border-radius: 5px;
-      font-size: 12px;
-      font-weight: normal;
-      border: none;
-      border-collapse: collapse;
-      width: 100%;
-      max-width: 100%;
-      white-space: nowrap;
-      background-color: white;
-      overflow-y: scroll;
-  }
-  
-  .fl-table td, .fl-table th {
-      text-align: center;
-      padding: 8px;
-  }
-  
-  .fl-table td {
-      border-right: 1px solid #f8f8f8;
-      font-size: 12px;
-  }
-  
-  .fl-table thead th {
-      color: #ffffff;
-      background: #98b4ac;
-  }
-  
-  .fl-table thead th:nth-child(odd) {
-      color: #ffffff;
-      background: #98b4ac;
-  }
-  
-  .fl-table tr:nth-child(even) {
-      background: #F8F8F8;
-  }
-  
-  /* Responsive */
-  
-  @media (max-width: 767px) {
-      .fl-table {
-          display: block;
-          width: 100%;
-      }
-      .table-wrapper:before{
-          content: "Scroll horizontally >";
-          display: block;
-          text-align: right;
-          font-size: 11px;
-          color: white;
-          padding: 0 0 10px;
-      }
-      .fl-table thead, .fl-table tbody, .fl-table thead th {
-          display: block;
-      }
-      .fl-table thead th:last-child{
-          border-bottom: none;
-      }
-      .fl-table thead {
-          float: left;
-      }
-      .fl-table tbody {
-          width: auto;
-          position: relative;
-          overflow-x: auto;
-      }
-      .fl-table td, .fl-table th {
-          padding: 20px .625em .625em .625em;
-          height: 60px;
-          vertical-align: middle;
-          box-sizing: border-box;
-          overflow-x: hidden;
-          overflow-y: auto;
-          width: 120px;
-          font-size: 13px;
-          text-overflow: ellipsis;
-      }
-      .fl-table thead th {
-          text-align: left;
-          border-bottom: 1px solid #f7f7f9;
-      }
-      .fl-table tbody tr {
-          display: table-cell;
-      }
-      .fl-table tbody tr:nth-child(odd) {
-          background: none;
-      }
-      .fl-table tr:nth-child(even) {
-          background: transparent;
-      }
-      .fl-table tr td:nth-child(odd) {
-          background: #F8F8F8;
-          border-right: 1px solid #E6E4E4;
-      }
-      .fl-table tr td:nth-child(even) {
-          border-right: 1px solid #E6E4E4;
-      }
-      .fl-table tbody td {
-          display: block;
-          text-align: center;
-      }
-  }
-  .table_head{
-    font-size: 18px;
+    width: 100%;
+    min-width: 1320px;
+    height: 60px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 600;
+    color: #fff;
+    background-color: #d8c090;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
   }
 
-    .button {
+  /* Table Styles */
+  .table-wrapper {
+    margin: 10px 70px 70px;
+    box-shadow: 0px 35px 50px rgba(0, 0, 0, 0.2);
+  }
+
+  .fl-table {
+    border-radius: 5px;
+    font-size: 12px;
+    font-weight: normal;
+    border: none;
+    border-collapse: collapse;
+    width: 100%;
+    max-width: 100%;
+    white-space: nowrap;
+    background-color: white;
+    overflow-y: scroll;
+  }
+
+  .fl-table td,
+  .fl-table th {
+    text-align: center;
+    padding: 8px;
+  }
+
+  .fl-table td {
+    border-right: 1px solid #f8f8f8;
+    font-size: 12px;
+  }
+
+  .fl-table thead th {
+    color: #ffffff;
+    background: #98b4ac;
+  }
+
+  .fl-table thead th:nth-child(odd) {
+    color: #ffffff;
+    background: #98b4ac;
+  }
+
+  .fl-table tr:nth-child(even) {
+    background: #F8F8F8;
+  }
+
+  /* Responsive */
+  @media (max-width: 767px) {
+    .fl-table {
+      display: block;
+      width: 100%;
+    }
+
+    .table-wrapper:before {
+      content: "Scroll horizontally >";
+      display: block;
+      text-align: right;
+      font-size: 11px;
+      color: white;
+      padding: 0 0 10px;
+    }
+
+    .fl-table thead,
+    .fl-table tbody,
+    .fl-table thead th {
+      display: block;
+    }
+
+    .fl-table thead th:last-child {
+      border-bottom: none;
+    }
+
+    .fl-table thead {
+      float: left;
+    }
+
+    .fl-table tbody {
+      width: auto;
+      position: relative;
+      overflow-x: auto;
+    }
+
+    .fl-table td,
+    .fl-table th {
+      padding: 20px .625em .625em .625em;
+      height: 60px;
+      vertical-align: middle;
+      box-sizing: border-box;
+      overflow-x: hidden;
+      overflow-y: auto;
+      width: 120px;
+      font-size: 13px;
+      text-overflow: ellipsis;
+    }
+
+    .fl-table thead th {
+      text-align: left;
+      border-bottom: 1px solid #f7f7f9;
+    }
+
+    .fl-table tbody tr {
+      display: table-cell;
+    }
+
+    .fl-table tbody tr:nth-child(odd) {
+      background: none;
+    }
+
+    .fl-table tr:nth-child(even) {
+      background: transparent;
+    }
+
+    .fl-table tr td:nth-child(odd) {
+      background: #F8F8F8;
+      border-right: 1px solid #E6E4E4;
+    }
+
+    .fl-table tr td:nth-child(even) {
+      border-right: 1px solid #E6E4E4;
+    }
+
+    .fl-table tbody td {
+      display: block;
+      text-align: center;
+    }
+  }
+
+  .table_head {
+    font-size: 16px;
+  }
+
+  .button {
     margin: 0 auto;
     width: 96px;
     height: 27px;
@@ -180,75 +187,86 @@ View Another Feedback
     transition: all 0.3s ease 0s;
     cursor: pointer;
     outline: none;
-    }
-  
-    .button:hover {
+  }
+
+  .button:hover {
     background-color: #95B9C7;
     box-shadow: 0px 15px 20px #C9C0BB;
     color: #fff;
   }
+
   .center_title {
+    text-align: center;
+    margin-right: 20px;
+    font-size: 18.5px;
+  }
 
-text-align: center;
-margin-right: 20px;
-font-size: 18.5px;
-}
   .center {
+    text-align: center;
+  }
 
-text-align: center;
-}
-#id_pickedDate{
+  #id_pickedDate {
     width: 10vw;
     height: 3vh;
-}
-  </style>
-
-  <div class="table-cont">
-               <div class="fac">
-          <button type="submit" class="buttonF">List of Feedback From Counseled Students</button>
-        </div> 
-  <br>  
-          <form method="POST" action="{% url 'counselor_view_another_feedback' %}">
-          {% csrf_token %}
-      <div class="center_title">
-        <p><i><h4>To view a Feedback, select the date below.</h4></i></p>
-      </div>
-      <div class="center">
-        {{ offer.pickedDate }} <button type="submit" class="button">Submit</button>
-              </div>
-      </form>
-      <br>
-
- 
-<div class="table-wrapper">
-  <table class="fl-table">
+  }
+</style>
+<div class="table-cont">
+  <div class="fac">
+    <button type="submit" class="buttonF">List of Feedback From Counseled Students</button>
+  </div>
+   <!-- <form method="POST" action="{% url 'counselor_search_view_feedback' %}"> {% csrf_token %} <div class="center_title">
+      <p>
+        <i>
+          <h4>Seach pailyedo</h4>
+        </i>
+      </p>
+    </div>
+    <div class="center">
+      {{ search }}
+      <button type="submit" class="button">Submit</button>
+    </div>
+  </form> -->
+  <br>
+  <form method="POST" action="{% url 'counselor_view_another_feedback' %}"> {% csrf_token %} <div class="center_title">
+      <p>
+        <i>
+          <h4>To view a Feedback, select the date below.</h4>
+        </i>
+      </p>
+    </div>
+    <div class="center">
+      {{ offer.pickedDate }}
+      <button type="submit" class="button">Submit</button>
+    </div>
+  </form>
+  <br>
+  <div class="table-wrapper">
+    <table class="fl-table">
       <thead>
-      <tr>
+        <tr>
           <th class="table_head">Date of Session</th>
           <th class="table_head">ID Number</th>
           <th class="table_head">Students Name</th>
           <th class="table_head">Degree Program</th>
           <th class="table_head">Information</th>
-      </tr>
-      </thead>
-      {% for object in student reversed %}
-      <tbody>
-      <tr>
+        </tr>
+      </thead> {% for object in student reversed %} <tbody>
+        <tr>
           <td style="font-size: 17px;">{{object.date}}</td>
           <td style="font-size: 17px;">{{object.studnumber}}</td>
           <td style="font-size: 17px;">{{object.degree_program}}</td>
           <td style="font-size: 17px;">{{object.lastname}}, &nbsp; {{object.firstname}}</td>
-          <td style="font-size: 17px;"><a href="{% url 'counselor_view_detail_feedback' object.id %}" style="color: black; font-weight: 550;"><b>View More Information</b></a></td>
-        
-      </tr>
-      <tbody>
-        {% endfor %}
-  </table>
-  <div style="padding: 2px;">
-      {% if not student %}
-      <center><b><p style="font-size: 18px;">No Feedbacks Yet!</p></b></center>
-      {% endif %}
-  </div>
-</div>
-  
-  {% endblock %}
+          <td style="font-size: 17px;">
+            <a href="{% url 'counselor_view_detail_feedback' object.id %}" style="color: black; font-weight: 550;">
+              <b>View More Information</b>
+            </a>
+          </td>
+        </tr>
+      <tbody> {% endfor %}
+    </table>
+    <div style="padding: 2px;"> {% if not student %} <center>
+        <b>
+          <p style="font-size: 16px;">No Feedbacks Yet!</p>
+        </b>
+      </center> {% endif %} </div>
+  </div> {% endblock %}
