--- a/templates/director/director_degree_program.html
+++ b/templates/director/director_degree_program.html
@@ -1,21 +1,11 @@
-{% extends "director/director_home.html" %}
-
-{% block title %} 
-View Offer
-{% endblock %} 
-
-
-{% block content %} 
-<style>
-
-/* Table Styles */
-
-.table-wrapper{
+{% extends "director/director_home.html" %} {% block title %} View Offer {% endblock %} {% block content %} <style>
+  /* Table Styles */
+  .table-wrapper {
     margin: 10px 70px 70px;
-    box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
-}
+    box-shadow: 0px 35px 50px rgba(0, 0, 0, 0.2);
+  }
 
-.fl-table {
+  .fl-table {
     border-radius: 5px;
     font-size: 12px;
     font-weight: normal;
@@ -26,168 +16,184 @@ View Offer
     white-space: nowrap;
     background-color: white;
     overflow-y: scroll;
-}
+  }
 
-.fl-table td, .fl-table th {
-    text-align: center;
-    padding: 8px;
-}
+  .fl-table td,
+  .fl-table th {
+    text-align: left;
+    padding: 11px;
+  }
 
-.fl-table td {
+  .fl-table td {
     border-right: 1px solid #f8f8f8;
     font-size: 12px;
-}
+  }
 
-.fl-table thead th {
+  .fl-table thead th {
     color: #ffffff;
     background: #98b4ac;
-}
+  }
 
-.fl-table thead th:nth-child(odd) {
+  .fl-table thead th:nth-child(odd) {
     color: #ffffff;
     background: #98b4ac;
-}
+  }
 
-.fl-table tr:nth-child(even) {
+  .fl-table tr:nth-child(even) {
     background: #F8F8F8;
-}
-      tr:nth-child(odd):hover td {
-    background:#C1C3D1;
   }
 
-/* Responsive */
+  tr:nth-child(odd):hover td {
+    background: #C1C3D1;
+  }
 
-@media (max-width: 767px) {
+  /* Responsive */
+  @media (max-width: 767px) {
     .fl-table {
-        display: block;
-        width: 100%;
+      display: block;
+      width: 100%;
     }
-    .table-wrapper:before{
-        content: "Scroll horizontally >";
-        display: block;
-        text-align: right;
-        font-size: 11px;
-        color: white;
-        padding: 0 0 10px;
+
+    .table-wrapper:before {
+      content: "Scroll horizontally >";
+      display: block;
+      text-align: right;
+      font-size: 11px;
+      color: white;
+      padding: 0 0 10px;
     }
-    .fl-table thead, .fl-table tbody, .fl-table thead th {
-        display: block;
-    }
-    .fl-table thead th:last-child{
-        border-bottom: none;
-    }
-    .fl-table thead {
-        float: left;
-    }
-    .fl-table tbody {
-        width: auto;
-        position: relative;
-        overflow-x: auto;
-    }
-    .fl-table td, .fl-table th {
-        padding: 20px .625em .625em .625em;
-        height: 60px;
-        vertical-align: middle;
-        box-sizing: border-box;
-        overflow-x: hidden;
-        overflow-y: auto;
-        width: 120px;
-        font-size: 13px;
-        text-overflow: ellipsis;
-    }
+
+    .fl-table thead,
+    .fl-table tbody,
     .fl-table thead th {
-        text-align: left;
-        border-bottom: 1px solid #f7f7f9;
+      display: block;
     }
+
+    .fl-table thead th:last-child {
+      border-bottom: none;
+    }
+
+    .fl-table thead {
+      float: left;
+    }
+
+    .fl-table tbody {
+      width: auto;
+      position: relative;
+      overflow-x: auto;
+    }
+
+    .fl-table td,
+    .fl-table th {
+      padding: 20px .625em .625em .625em;
+      height: 60px;
+      vertical-align: middle;
+      box-sizing: border-box;
+      overflow-x: hidden;
+      overflow-y: auto;
+      width: 120px;
+      font-size: 13px;
+      text-overflow: ellipsis;
+    }
+
+    .fl-table thead th {
+      text-align: left;
+      border-bottom: 1px solid #f7f7f9;
+    }
+
     .fl-table tbody tr {
-        display: table-cell;
+      display: table-cell;
     }
+
     .fl-table tbody tr:nth-child(odd) {
-        background: none;
+      background: none;
     }
+
     .fl-table tr:nth-child(even) {
-        background: transparent;
+      background: transparent;
     }
+
     .fl-table tr td:nth-child(odd) {
-        background: #F8F8F8;
-        border-right: 1px solid #E6E4E4;
+      background: #F8F8F8;
+      border-right: 1px solid #E6E4E4;
     }
+
     .fl-table tr td:nth-child(even) {
-        border-right: 1px solid #E6E4E4;
+      border-right: 1px solid #E6E4E4;
     }
+
     .fl-table tbody td {
-        display: block;
-        text-align: center;
+      display: block;
+      text-align: center;
     }
-}
-.fac{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
-}
-
-.buttonF {
-  position: fixed;
-
-width: 100%;
-min-width: 1320px;
-height: 60px;
-font-family: 'Roboto', sans-serif;
-font-size: 15px;
-text-transform: uppercase;
-letter-spacing: 2.5px;
-font-weight: 600;
-color: #fff;
-background-color: #d8c090;
-border: none;
-border-radius: 8px;
-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-transition: all 0.3s ease 0s;
-cursor: pointer;
-outline: none;
-
   }
-  .parent_tr{
-     font-size: 17px;
+
+  .fac {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
   }
-.parent_td{
- text-align: left; border: solid 1px #DDEEEE;
-color: #333;
-padding: 10px;
-text-shadow: 1px 1px 1px #fff;
-}
+
+  .buttonF {
+    position: fixed;
+    width: 100%;
+    min-width: 1320px;
+    height: 60px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 600;
+    color: #fff;
+    background-color: #d8c090;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  }
+
+  .parent_tr {
+    font-size: 17px;
+  }
+
+  .parent_td {
+    text-align: left;
+    border: solid 1px #DDEEEE;
+    color: #333;
+    padding: 10px;
+    text-shadow: 1px 1px 1px #fff;
+  }
 </style>
-    
-
 <div class="fac">
-    <button type="submit" class="buttonF">List of Degree program</button>
-  </div> 
-  <br> <br>
+  <button type="submit" class="buttonF">List of Degree program</button>
+</div>
+<br>
+<br>
 <div class="table-wrapper">
   <table class="fl-table">
-      <thead>
+    <thead>
       <tr>
-          <th class="parent_tr">Program Code</th>
-          <th class="parent_tr">Program Name</th>
+        <th class="parent_tr">Program Code</th>
+        <th class="parent_tr">Program Name</th>
       </tr>
-      </thead>
-      {% for form in degree %}
-      <tbody>
+    </thead> {% for form in degree %} <tbody>
       <tr>
-          <td  style="font-size: 15px;" class="parent_td"><a style="color: #504A4B" href="{% url 'view_stat_by_degree_program' form.program_code  %}"><b>{{form.program_code}}</b></a>
-             <td  style="font-size: 15px;" class="parent_td"><a style="color: #504A4B" href="{% url 'view_stat_by_degree_program' form.program_code  %}"><b>{{form.program_name}}</b></a>
-        
+        <td style="font-size: 15px;" class="parent_td">
+          <a style="color: #504A4B" href="{% url 'view_stat_by_degree_program' form.program_code  %}">
+            <b>{{form.program_code}}</b>
+          </a>
+        <td style="font-size: 15px;" class="parent_td">
+          <a style="color: #504A4B;" href="{% url 'view_stat_by_degree_program' form.program_code  %}">
+            <b>{{form.program_name}}</b>
+          </a>
       </tr>
-      <tbody>
-        {% endfor %}
-  </table>
-  {% if not degree %}
-<center><p><b>No Data Available</b></p></center>
-{% endif %}
-</div>
-
-
-
-
-{% endblock %}
+    <tbody> {% endfor %}
+  </table> {% if not degree %} <center>
+    <p>
+      <b>No Data Available</b>
+    </p>
+  </center> {% endif %}
+</div> {% endblock %}
