--- a/templates/director/form.html
+++ b/templates/director/form.html
@@ -1,113 +1,114 @@
-{% extends "director/director_home.html" %}
-
-
-
-{% block content %} 
-<style>
-.offering{
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 650px;
-  min-height: 530px;
-  /* height: 300px; */
-  border-radius: 5px;
-  background-color: #98b4ac;
-  float: center;
-margin: auto;
-  text-align: center;
-   line-height: 40px; 
-}
-#id_semester{
-  width: 150px;
-}
-#id_school_year{
-  width: 200px;
-}
-.column{
- width:250px;
- float:center;
- margin-left: 10px;
- padding: 10px;   
- text-align: left;
-}
-.row{
- width: 450px;
- float:center;
- text-align: left;
-}
-
-
-/* BUTTONS */
-.wrap {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: auto;
-}
-
-.button {
-  width: 140px;
-  height: 30px;
-  font-family: 'Roboto', sans-serif;
-  font-size: 12px;
-  text-transform: uppercase;
-  letter-spacing: 2.5px;
-  font-weight: 500;
-  color: #000;
-  background-color: #fff;
-  border: none;
-  border-radius: 45px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease 0s;
-  cursor: pointer;
-  outline: none;
-
+{% extends "director/director_home.html" %} {% block content %} <style>
+  .offering {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    width: 55vw;
+    min-height: 530px;
+    /* height: 300px; */
+    border-radius: 5px;
+    background-color: #98b4ac;
+    float: center;
+    margin: auto;
+    text-align: center;
+    line-height: 40px;
   }
 
-.button:hover {
-  background-color: #95B9C7;
-  box-shadow: 0px 15px 20px #C9C0BB;
-  color: #fff;
-  transform: translateY(-7px);
-}
-.fac{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
-}
-
-.buttonF {
-  position: fixed;
-width: 100%;
-min-width: 1320px;
-height: 60px;
-font-family: 'Roboto', sans-serif;
-font-size: 15px;
-text-transform: uppercase;
-letter-spacing: 2.5px;
-font-weight: bolder;
-color: #fff;
-background-color: #d8c090;
-border: none;
-border-radius: 8px;
-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-transition: all 0.3s ease 0s;
-cursor: pointer;
-outline: none;
+  #id_semester {
+    width: 150px;
   }
 
-.bText{
-  color: #fff;
-}
-#id_program_designation{
-  width: 230px;
-  text-align: left;
-  font-size: 16.5px;
-  margin: auto;
-}
-    .message {
+  #id_school_year {
+    width: 200px;
+  }
+
+  .column {
+    width: 250px;
+    float: center;
+    margin-left: 10px;
+    padding: 10px;
+    text-align: left;
+  }
+
+  .row {
+    width: 450px;
+    float: center;
+    text-align: left;
+  }
+
+  /* BUTTONS */
+  .wrap {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+  }
+
+  .button {
+    margin-bottom: 2vh;
+    width: 8vw;
+    height: 3.5vh;
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
+    background-color: #fff;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  }
+
+  .button:hover {
+    background-color: #95B9C7;
+    box-shadow: 0px 15px 20px #C9C0BB;
+    color: #fff;
+    transform: translateY(-7px);
+  }
+
+  .fac {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+  }
+
+  .buttonF {
+    position: fixed;
+    width: 100%;
+    min-width: 1320px;
+    height: 60px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: bolder;
+    color: #fff;
+    background-color: #d8c090;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  }
+
+  .bText {
+    color: #fff;
+  }
+
+  #id_program_designation {
+    width: 120vh;
+    text-align: left;
+    font-size: 18px;
+    margin: auto;
+  }
+
+  .message {
     margin: 0 auto;
     width: 455px;
     height: 45px;
@@ -124,52 +125,42 @@ outline: none;
     transition: all 0.3s ease 0s;
     cursor: pointer;
     outline: none;
-    }
-    #id_firstname{
-      font-size: 16.5px;
-    }
-    #id_lastname{
-      font-size: 16.5px;
-    }
-    .pText{
-      font-size: 18px;
-    }
-</style>
+  }
 
+  #id_firstname {
+    font-size: 16.5px;
+  }
+
+  #id_lastname {
+    font-size: 16.5px;
+  }
+
+  .pText {
+    font-size: 18px;
+  }
+</style>
 <div class="fac">
   <button type="submit" class="buttonF">Assign Employee</button>
-</div> 
-
-<br> <br>
-<div style="text-align: center">
-       {% for message in messages %}
-     <button type="submit" class="message"><b>{{message}} !</b></button>
-     {% endfor %}
 </div>
-     <br>
-
+<br>
+<br>
+<div style="text-align: center"> {% for message in messages %} <button type="submit" class="message">
+    <b>{{message}} !</b>
+  </button> {% endfor %} </div>
 <div class="offering">
-
-
-  <form method="POST" action="">
-    {% csrf_token %}
-   
-        <p class="pText"><b class="bText">First Name: &nbsp;</b> {{form1.firstname}}</p>
-        <p class="pText"><b class="bText">Last Name: &nbsp;</b>  {{form1.lastname}}</p>
-        <p class="pText"><b class="bText">Program Designation: &nbsp;</b> {{form1.program_designation}}</p>
-        &nbsp;    &nbsp;   
-     
-          <button type="submit" class="button">Submit</button>
-        <br>
-</form>
-
-  </div>
-  <br>
-
-
-
-{% endblock %}
-
-
-
-
+  <form method="POST" action=""> {% csrf_token %} <div style="text-align: left; margin-left: 2vw;">
+      <p class="pText">
+        <b class="bText">First Name: &nbsp;</b> {{form1.firstname}}
+      </p>
+      <p class="pText">
+        <b class="bText">Last Name: &nbsp;</b> {{form1.lastname}}
+      </p>
+    </div>
+    <p class="pText">
+      <b class="bText">Program Designation: &nbsp;</b> {{form1.program_designation}}
+    </p> &nbsp; &nbsp; <button type="submit" class="button">
+      <b>Submit</b>
+    </button>
+  </form>
+</div>
+<br> {% endblock %}
