--- a/templates/director/offering.html
+++ b/templates/director/offering.html
@@ -1,195 +1,198 @@
-{% extends "director/director_home.html" %}
-
-{% block title %} 
-Schedule
-{% endblock %} 
-
-{% block content %} 
-<style>
-.offering{
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 50vw;
-  height: 50vh;
-  border-radius: 5px;
-  background-color: #98b4ac;
-  float: center;
-  margin: auto;
-   line-height: 40px; 
-}
-#id_semester{
-  width: 150px;
-}
-#id_school_year{
-  width: 200px;
-}
-.column{
- width:250px;
- float:center;
- margin-left: 10px;
- padding: 10px;   
- text-align: left;
-}
-.row{
- width: 450px;
- float:center;
- text-align: left;
-}
-.column1{
-
-  margin: 112px;
-
-}
-.row1{
-
-  margin: 112px;
-
-}
-
-/* BUTTONS */
-.wrap {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: auto;
-}
-
-.button {
-  width: 10vw;
-  height: 32px;
-  font-family: 'Roboto', sans-serif;
-  font-size: 12.5px;
-  text-transform: uppercase;
-  letter-spacing: 2.5px;
-  font-weight: 500;
-  color: #000;
-  background-color: #fff;
-  border: none;
-  border-radius: 45px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease 0s;
-  cursor: pointer;
-  outline: none;
-
+{% extends "director/director_home.html" %} {% block title %} Schedule {% endblock %} {% block content %} <style>
+  .offering {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    width: 50vw;
+    height: 50vh;
+    border-radius: 5px;
+    background-color: #98b4ac;
+    float: center;
+    margin: auto;
+    line-height: 40px;
   }
 
-.button:hover {
-  background-color: #95B9C7;
-  box-shadow: 0px 15px 20px #C9C0BB;
-  color: #fff;
-  transform: translateY(-7px);
-}
-.bText{
-  color: #fff;
-}
-.fac{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
-}
-
-.buttonF {
-  position: fixed;
-
-width: 100%;
-min-width: 1320px;
-height: 60px;
-font-family: 'Roboto', sans-serif;
-font-size: 15px;
-text-transform: uppercase;
-letter-spacing: 2.5px;
-font-weight: 600;
-color: #fff;
-background-color: #d8c090;
-border: none;
-border-radius: 8px;
-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-transition: all 0.3s ease 0s;
-cursor: pointer;
-outline: none;
+  #id_semester {
+    width: 150px;
   }
-.pText{
-  font-size: 22px;
-}
-.bText{}
 
-#id_semester{
-  width: 20vw;
-  height: 3vh;
-  font-size: 15px;
-}
-#id_school_year{
-  width: 20vw;
-  height: 3vh;
-  font-size: 15px;
-}
-#id_depa_choice{
-  width: 20vw;
-  height: 3vh;
-  font-size: 15px;
-}
-.parent_input{
-  display: flex;
-  flex-direction: row;
-  margin-left: 2.3rem;
-}
-.semester_input{
-  display: flex;
-  flex-direction: column;
-}
-.syear_input{
-  display: flex;
-  flex-direction: column;
-}
-.introduction{
-  font-size: 19px;
-}
-  </style>
+  #id_school_year {
+    width: 200px;
+  }
 
+  .column {
+    width: 250px;
+    float: center;
+    margin-left: 10px;
+    padding: 10px;
+    text-align: left;
+  }
+
+  .row {
+    width: 450px;
+    float: center;
+    text-align: left;
+  }
+
+  .column1 {
+    margin: 112px;
+  }
+
+  .row1 {
+    margin: 112px;
+  }
+
+  /* BUTTONS */
+  .wrap {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+  }
+
+  .button {
+    width: 10vw;
+    height: 32px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 12.5px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
+    background-color: #fff;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  }
+
+  .button:hover {
+    background-color: #95B9C7;
+    box-shadow: 0px 15px 20px #C9C0BB;
+    color: #fff;
+    transform: translateY(-7px);
+  }
+
+  .bText {
+    color: #fff;
+  }
+
+  .fac {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+  }
+
+  .buttonF {
+    position: fixed;
+    width: 100%;
+    min-width: 1320px;
+    height: 60px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 600;
+    color: #fff;
+    background-color: #d8c090;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  }
+
+  .pText {
+    font-size: 22px;
+  }
+
+  .bText {}
+
+  #id_semester {
+    width: 20vw;
+    height: 3vh;
+    font-size: 15px;
+  }
+
+  #id_school_year {
+    width: 20vw;
+    height: 3vh;
+    font-size: 15px;
+  }
+
+  #id_depa_choice {
+    width: 20vw;
+    height: 3vh;
+    font-size: 15px;
+  }
+
+  .parent_input {
+    display: flex;
+    flex-direction: row;
+    margin-left: 2.3rem;
+  }
+
+  .semester_input {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .syear_input {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .introduction {
+    font-size: 19px;
+  }
+</style>
 <div class="fac">
-
-  <button type="submit" class="buttonF"><b>View Offering</b></button>
-</div> 
-<br> <br>
-<div class="introduction"> 
-  <i><h3>To view the Offering, select a semester, year and department.</h3></i>
+  <button type="submit" class="buttonF">
+    <b>View Offering</b>
+  </button>
 </div>
-<br> <br>
+<br>
+<br>
+<div class="introduction">
+  <i>
+    <h3>To view the Offering, select a semester, year and department.</h3>
+  </i>
+</div>
+<br>
+<br>
 <div class="offering">
-  <form method="POST" action="">
-    {% csrf_token %}
-
-    
-<div class="parent_input">
+  <form method="POST" action=""> {% csrf_token %} <div class="parent_input">
       <div class="semester_input">
-
-        <p class="pText"><b class="bText">Choose Semester: &nbsp;</b> {{form.semester}}</p>
-        <p class="pText"><b class="bText">Choose Department: &nbsp;</b>{{form.depa_choice}}</p>
-
+        <p class="pText">
+          <b class="bText">Choose Semester: &nbsp;</b> {{form.semester}}
+        </p>
+        <p class="pText">
+          <b class="bText">Choose Department: &nbsp;</b>{{form.depa_choice}}
+        </p>
       </div>
-          <div class="syear_input">
-  
-        <p class="pText"><b class="bText">School Year: &nbsp;</b>  {{form.school_year}}</p>
-
+      <div class="syear_input">
+        <p class="pText">
+          <b class="bText">School Year: &nbsp;</b> {{form.school_year}}
+        </p>
       </div>
-</div>
-<br> <br> <br>
-<div class="submit_button">
-        <div class="wrap">
-          <button type="submit" class="button"><b>Submit</b></button>
-        </div>
-</div>
-{% for message in messages %}
-  <center> <b><p>{{message}} !</p></b> </center>   
-                {% endfor %}
-
-</form>
-
-
-  
-                  
-  </div>
-
-{% endblock %}
+    </div>
+    <br>
+    <br>
+    <br>
+    <div class="submit_button">
+      <div class="wrap">
+        <button type="submit" class="button">
+          <b>Submit</b>
+        </button>
+      </div>
+    </div> {% for message in messages %} <center>
+      <b>
+        <p>{{message}} !</p>
+      </b>
+    </center> {% endfor %}
+  </form>
+</div> {% endblock %}
