--- a/templates/director/view_stat_by_counselor_with_date.html
+++ b/templates/director/view_stat_by_counselor_with_date.html
@@ -237,14 +237,19 @@
   #id_pickedEndDate {
     height: 3vh;
   }
+
   .center_title {
     font-size: 18px;
   }
 
   .dataTitle {
-    margin-left: 20vw;
     display: flex;
     flex-direction: row;
+    margin: 0;
+    position: absolute;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
   }
 
   .data {
@@ -294,42 +299,38 @@
     </div>
   </div>
 </form>
+<br>
 <br> <br>
 <div class="dataTitle">
-  <div style="margin-top: 1vh;">
-    <i>
-      <h3>There are </h3>
-    </i>
-  </div>
   <div class="data">
     <b>{{stat}}</b>
   </div>
-  <div style="margin-top: 1vh;">
+  <div style="margin-top: 2vh;">
     <i>
-      <h3>referred Students under </h3>
+      <h3>are referred under </h3>
     </i>
   </div>
   <div class="data">
     <b> {{couns.firstname}} {{couns.lastname}}</b>
   </div>
-    <div style="margin-top: 1vh; margin-left: 1vh;">
+  <div style="margin-top: 2vh; margin-left: 1vh;">
     <i>
       <h3>from</h3>
     </i>
   </div>
-       <div class="data">
-                    <b>{{start}}</b>
-                 </div>
-  <div style="margin-top: 1vh;">
+  <div class="data">
+    <b>{{start}}</b>
+  </div>
+  <div style="margin-top: 2vh;">
     <i>
       <h3>to</h3>
     </i>
   </div>
-       <div class="data">
-                    <b>{{end}}</b>
-                 </div>
+  <div class="data">
+    <b>{{end}}</b>
+  </div>
 </div>
-<br>
+<br> <br>
 <div class="table-wrapper">
   <table class="fl-table">
     <thead>
