--- a/templates/student/notif_detail.html
+++ b/templates/student/notif_detail.html
@@ -1,225 +1,548 @@
-{% extends "student/student_home.html" %}
-
-{% block title %} 
-Notification_Detail
-{% endblock %} 
-
-{% block content %} 
+{% extends "student/student_home.html" %} {% block title %} Notification_Detail {% endblock %} {% block content %}
+<!--========== BOX ICONS ==========-->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 <style>
   #wrapper {
-  
     display: flex;
     padding: 20px;
   }
-  
+
   #square {
     min-width: 300px;
     height: 350px;
     border-radius: 20px;
-  
-  
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: #98b4ac;
+    box-shadow:
+      0 9px 33px rgba(0, 0, 0, 0.07);
     margin: auto;
     overflow-wrap: break-word;
   }
+
+  /* .box {
   
-  
-  #box {
-    border: 1px solid #d8c090;
-    border-radius: 10px;
-        background-color: #98b4ac;
-        box-shadow:
-          0 9px 33px rgba(0, 0, 0, 0.07);
-          max-width: 700px;
-          /* min-height: 400px; */
-    height: 500px;
-    float: center;
+  border: 2px solid black;
+border-radius: 15px;
+
+    box-shadow:
+      5 90px 50px rgba(0, 0, 0, 0.07);
+      min-width: 550px;
+min-height: 200px;
+
+display: flex;
+  width: 100px;
+  white-space: nowrap;
+  text-overflow: ellipsis; 
+  margin-left: 20px;
+   overflow-y: auto;
+} */
+  .table-head {
+    background: #E5E4E2;
+    box-shadow: none;
+    color: #fff;
+    font-weight: 600;
+    line-height: 5px;
+    box-shadow: 0 1px 4px 0px rgba(0, 0, 50, 0.3);
+    width: 500px;
     margin: auto;
-    overflow-y: scroll;
-  text-overflow: ellipsis;
+    border-radius: 20px;
   }
-  /* === TABLE ==== */
-  
-  /* .table-row{
-      display: table;
-      width: 40%;
-      margin: 10px auto;
-      font-family: sans-serif;
-      background: transparent;
-      padding: 4px 0;
-      color: #555;
-      font-size: 13px;
-      box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
-      height: 0.1%;
-      border-radius: 20px;
-      margin-top: 50px;
-       
-  } */
-  .table-head{
-    
-      background: #E5E4E2;
-      box-shadow: none;
-      color: #fff;
-      font-weight: 600;
-      line-height: 5px;
-        box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
-        width: 500px;
-        margin: auto;
-        border-radius: 20px;
+
+  .table-head .table-cell {
+    border-right: none;
   }
-  .table-head .table-cell{
-      border-right: none;
+
+  .table-cell {
+    display: table-cell;
+    width: 20%;
+    text-align: center;
+    padding: 4px 0;
+    border-right: 1px solid #838996;
+    vertical-align: middle;
   }
-  .table-cell{
-      display: table-cell;
-      width: 20%;
-      text-align: center;
-      padding: 4px 0;
-      border-right: 1px solid #838996;
-      vertical-align: middle;
+
+  .first-cell {
+    text-align: left;
+    padding-left: 10px;
+    width: 8%;
   }
-  .first-cell{
-      text-align: left;
-      padding-left: 10px;
-      width: 8%;
+
+  .last-cell {
+    border-right: none;
+    width: 15px;
   }
-  .last-cell{
-      border-right: none;
-      width: 15px;
-  }
+
   /* a{
       textdecoration: none;
       color: #555;
   } */
-  p{
+  p {
     font-size: 17px;
     color: black;
   }
-  .listTitle{
+
+  .listTitle {
     font-size: 20px;
     text-align: center;
   }
+
   @media only screen and (max-width: 600px) {
     .table-row {
       font-size: 11px;
       margin: auto;
     }
   }
-  .modal1{
-    font-size: 23px;
+
+  .trow-list {
+    display: inline-block;
+    width: 70%;
+    font-family: sans-serif;
+    background: transparent;
+    padding: 10px 0;
+    margin: auto;
+  }
+
+  .modal1 {
+    font-size: 21px;
     font-weight: 300;
     text-align: left;
-    margin-left: auto;
   }
-  .modal2{
-    font-size: 22px;
+
+  .modal2 {
+    font-size: 20px;
     text-align: left;
-    /* line-height: 25px; */
-  }
-  .fac{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
-}
-
-.buttonF {
-  position: fixed;
-width: 100%;
-min-width: 1320px;
-height: 60px;
-font-family: 'Roboto', sans-serif;
-font-size: 15px;
-text-transform: uppercase;
-letter-spacing: 2.5px;
-font-weight: 600;
-color: #000;
-background-color: #d8c090;
-border: none;
-border-radius: 8px;
-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-transition: all 0.3s ease 0s;
-cursor: pointer;
-outline: none;
+    line-height: 25px;
   }
 
+  div.item {
+    vertical-align: auto;
+    display: inline-block;
+    text-align: center;
+    width: 120px;
+  }
 
-.Pbox{
-  display:inline-block;
-  width: auto;
-  font-size: 20px;
-  line-height: 25px;
-  text-align: justify;
-padding: 12px;
+  .caption {
+    display: block;
+  }
 
-word-break: break-word;
-}
+  .item {
+    width: 200px;
+    text-align: center;
+    display: block;
+    background-color: transparent;
+    border: 1px solid transparent;
+    margin-right: 10px;
+    margin-bottom: 1px;
+    float: left;
+  }
 
+  #index-gallery {
+    width: 465px;
+  }
 
+  .form_container {
+    margin-top: 20px;
+  }
+
+  #form-title {
+    color: #fff;
+  }
+
+  .login_btn {
+    width: 100%;
+    background: #48444c !important;
+    color: white !important;
+  }
+
+  .login_btn:focus {
+    box-shadow: none !important;
+    outline: 0px !important;
+  }
+
+  .login_container {
+    padding: 0 2rem;
+  }
+
+  /* <--------- FOR BUTTON SA FEEDBAK ----->  */
+  .table-head1 {
+    background: #d8c090;
+    box-shadow: none;
+    color: #fff;
+    font-weight: 600;
+    line-height: 1px;
+    box-shadow: 0 1px 4px 0px rgba(0, 0, 50, 0.3);
+    width: 300px;
+    margin-left: 20px;
+    border-radius: 20px;
+  }
+
+  .table-head1 .table-cell1 {
+    border-right: none;
+  }
+
+  .table-cell1 {
+    display: table-cell;
+  }
+
+  .first-cell1 {
+    text-align: left;
+    padding-left: 10px;
+    width: 8%;
+  }
+
+  .buttons {
+    width: 200px;
+    height: auto;
+    border: 5em;
+    cursor: pointer;
+    outline: none;
+    font-size: 16px;
+    -webkit-transform: translate(0);
+    transform: translate(0);
+    background-image: linear-gradient(45deg, #98b4ac, #d8c090);
+    padding: 0.7em 2em;
+    border-radius: 65px;
+    box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.438);
+    -webkit-transition: box-shadow 0.25s;
+    transition: box-shadow 0.25s;
+    color: white;
+  }
+
+  .buttons .text {
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-image: linear-gradient(45deg, #d8c090, #98b4ac);
+  }
+
+  .buttons:after {
+    content: "";
+    border-radius: 18px;
+    position: absolute;
+    margin: 4px;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
+    background: #E5E4E2;
+  }
+
+  .buttons:hover {
+    background-image: linear-gradient(-45deg, #98b4ac, #d8c090);
+    box-shadow: 0 12px 24px rgba(128, 128, 128, 0.1);
+  }
+
+  .buttons:hover .text {
+    background-image: linear-gradient(-45deg, #d8c090, #98b4ac);
+  }
+
+  .Pbox {
+    font-size: 19px;
+    line-height: 30px;
+    text-align: justify;
+    overflow-y: scroll;
+    overflow-x: hidden;
+  }
+
+  .column {
+    min-width: 300px;
+    float: left;
+    margin-right: 20px;
+  }
+
+  .row {
+    width: 500px;
+    float: right;
+    text-align: left;
+    text-align: justify;
+    flex-direction: column-reverse;
+    padding: 8px;
+    margin-left: auto;
+    padding: 10px;
+    line-height: 30px;
+  }
+
+  .rowText {
+    font-size: 23px;
+    margin: 50px;
+  }
+
+  .image {
+    max-width: 320px;
+    height: 150px;
+  }
+
+  .picInfo {
+    display: flex;
+    justify-content: center;
+  }
+
+  .column {
+    width: 250px;
+    float: left;
+    margin-right: 20px;
+  }
+
+  .row1 {
+    width: 450px;
+    float: left;
+    margin-left: 200px;
+    padding-top: 17px;
+  }
+
+  .last {
+    margin: 0;
+    padding: 10px;
+  }
+
+  .pText {
+    font-weight: 600;
+    font-size: 20px;
+  }
+
+  .bText {
+    color: #000;
+    font-size: 20px;
+  }
+
+  form.cleanForm {
+    width: 700px;
+    margin: 0 auto;
+  }
+
+  form.cleanForm p {
+    margin-bottom: 15px;
+  }
+
+  .fac {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .buttonF {
+    margin-top: 4vh;
+    position: fixed;
+    width: 100%;
+    min-width: 1320px;
+    height: 60px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 600;
+    color: #fff;
+    background-color: #d8c090;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  }
+
+  .card1 {
+    margin: 0 auto;
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    width: fit-content;
+    border-radius: 5px;
+    flex-direction: column;
+    overflow: hidden;
+    background-color: whitesmoke;
+    margin-top: 8vh;
+  }
+
+  @media screen and (max-width: 320px) {
+    .header__search {
+      width: 70%;
+    }
+
+    .card1 {
+      width: 70%;
+    }
+  }
+
+  .wrap {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+  }
+
+  .button {
+    margin: 0 auto;
+    width: 160px;
+    height: 30px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
+    background-color: #d8c090;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  }
+
+  .button:hover {
+    background-color: #95B9C7;
+    box-shadow: 0px 15px 20px #C9C0BB;
+    color: #fff;
+    transform: translateY(-7px);
+  }
+
+  .scroll-box {
+    background: #f4f4f4;
+    height: 400px;
+    padding: 15px;
+    overflow-y: scroll;
+    text-align: justify;
+    border: 2px solid black;
+    border-radius: 15px;
+    box-shadow:
+      5 90px 50px rgba(0, 0, 0, 0.07);
+    min-width: 550px;
+    min-height: 200px;
+    width: 100px;
+    text-overflow: ellipsis;
+    margin-left: 60px;
+  }
+
+  .parent_div {
+    display: flex;
+    flex-direction: row;
+    column-gap: 4rem;
+    margin-left: 6rem;
+  }
+
+  .message {
+    margin: 0 auto;
+    width: 350px;
+    height: 45px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #fff;
+    background-color: #3c3c5c;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  }
+
+  button {
+    border-radius: 20px;
+    border: 1px solid green;
+    color: #FFFFFF;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 0 auto;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: transform 80ms ease-in;
+    margin: 0 auto;
+    height: 3.5vh;
+  }
+
+  .login_btn {
+    width: 10vw;
+    background: green !important;
+    color: white !important;
+  }
+
+  .login_btn:focus {
+    box-shadow: none !important;
+    outline: 0px !important;
+  }
+
+  .login_btn:hover {
+    background-color: green;
+    box-shadow: 0px 5px 5px #C9C0BB;
+    color: #fff;
+    transform: translateY(-7px);
+  }
+
+  .call_style {
+    color: #fff;
+    font-size: 15.5px;
+  }
 </style>
-
-
-        <div class="fac">
-          <button type="submit" class="buttonF">Full Details</button>
-        </div> 
-<br> butangan og call button 
-        
-{% for object in object_list %}
-<div id="wrapper">
-  <div id="square">
-    <h2>Must Remember
-    </h2>
-    <img style="max-width: 340px;
-    height: 280px; float: left;" 
-    src="https://userscontent2.emaze.com/images/f9d57cc4-7597-4be3-aa8b-cfc768013058/b0f9ecdf68e03c7cb84638da084701e2.png"  
-   >
-   <br>
-  
-  </div>
-  {% if object.subject_referred %}
-          {% if object.behavior_problem %}
-            <div id="box">
-                <div class="trow-list">
-                  <p class="Pbox">
-                    You have a scheduled appointment on <b>{{object.date}}</b> that will start at <b>{{object.start_time}}</b>
-                    and will end at <b>{{object.end_time}}</b> 
-                  </p>
-              </div>
-
-
-              </div>
-          </div>
-          {% else %}
-          <div id="box">
-                <div class="trow-list">
-                  <p class="Pbox">
-                    You have a scheduled appointment on <b>{{object.date}}</b> that will start at <b>{{object.start_time}}</b>
-                  and will end at <b>{{object.end_time}}</b> 
-                  </p>
-              </div>
-
-
-              </div>
-          </div>
-            {% endif %}  
-{% else %}
-<div id="box">
-
-  <div class="trow-list">
-    <p class="Pbox">
-      You have a schedule appointment on <b>{{object.date}}</b> that will start at <b> {{object.start_time}}</b>
-      and will end at <b>{{object.end_time}}</b> <br>
-    </p>
+<div class="fac">
+  <button type="submit" class="buttonF">Full Details</button>
 </div>
-
-
-
-
-     </div>
-
-
-  {% endif %}  
-
-{% endfor %} 
- </div>
-
-{% endblock %}
+<div class="parent_div"> {% for object in object_list %} {% if object.subject_referred %} {% if object.behavior_problem %}
+   <div class="card1">
+    <form action="#" class="cleanForm" method="POST">
+      <br>
+      <div>
+        <h3 style="text-align: justify; margin-left:8px; font-size: 24px;">
+          <i>Schedule of Appointment</i>
+        </h3>
+        <p class="rowText"> You have a scheduled appointment on <b>{{object.date}}</b> that will start at <b>{{object.start_time}}</b> and will end at <b>{{object.end_time}}</b>
+          <br>
+          <br>
+          <br>
+          <i>For Call, kindy tap the Call Button</i>
+          <br>
+          <i class='bx bx-calendar-check nav__icon'></i>
+        </p>
+      </div>
+    </form>
+    <div style="margin-top: 2vh;">
+      <a class="call_style" href="{% url 'student_call' %}">
+        <button class="btn login_btn">Call</button>
+      </a>
+    </div>
+  </div> {% else %} <div class="card1">
+    <form action="#" class="cleanForm" method="POST">
+      <br>
+      <div>
+        <h3 style="text-align: justify; margin-left:8px; font-size: 24px;">
+          <i>Schedule of Appointment</i>
+        </h3>
+        <p class="rowText"> You have a scheduled appointment on <b>{{object.date}}</b> that will start at <b>{{object.start_time}}</b> and will end at <b>{{object.end_time}}</b>
+          <br>
+          <br>
+          <br>
+          <i>For Call, kindy tap the Call Button</i>
+        </p>
+      </div>
+    </form>
+    <div style="margin-top: 2vh;">
+      <a class="call_style" href="{% url 'student_call' %}">
+        <button class="btn login_btn">Call</button>
+      </a>
+    </div>
+  </div> {% endif %} {% else %} <div class="card1">
+    <form action="#" class="cleanForm" method="POST">
+      <br>
+      <div>
+        <h3 style="text-align: justify; margin-left:8px; font-size: 24px;">
+          <i>Schedule of Appointment</i>
+        </h3>
+        <p class="rowText"> You have a scheduled appointment on <b>{{object.date}}</b> that will start at <b>{{object.start_time}}</b> and will end at <b>{{object.end_time}}</b>
+          <br>
+          <br>
+          <br>
+          <i>For Call, kindy tap the Call Button</i>
+        </p>
+      </div>
+    </form>
+    <div style="margin-top: 2vh;">
+      <a class="call_style" href="{% url 'student_call' %}">
+        <button class="btn login_btn">Call</button>
+      </a>
+    </div>
+  </div>
+</div> {% endif %} {% endfor %} </div> {% endblock %}
