--- a/templates/student/viewappointment.html
+++ b/templates/student/viewappointment.html
@@ -1,299 +1,286 @@
-{% extends "student/student_home.html" %}
-
-{% block title %} 
-Schedule
-{% endblock %} 
-
-{% block content %} 
-<style>
+{% extends "student/student_home.html" %} {% block title %} Schedule {% endblock %} {% block content %} <style>
   #wrapper {
-  
     display: flex;
     padding: 20px;
   }
-  
+
   #square {
     min-width: 300px;
     height: 350px;
     border-radius: 20px;
-  
     border: 1px solid #98b4ac;
     border-radius: 10px;
-        background-color: #98b4ac;
-        box-shadow:
-          0 9px 33px rgba(0, 0, 0, 0.07);
+    background-color: #98b4ac;
+    box-shadow:
+      0 9px 33px rgba(0, 0, 0, 0.07);
     margin: auto;
     overflow-wrap: break-word;
   }
-  
-  #box {
-  
-    border: 1px solid black;
-  border-radius: 10px;
- 
-      box-shadow:
-        0 9px 33px rgba(0, 0, 0, 0.07);
-        min-width: 1008px;
-  min-height: 100px;
-  float: left;
-  margin: auto;
-  display: flex;
-  flex-direction: row;
-  overflow: hidden;
-  white-space:normal; word-break: break-all;
-  }
-  /* === TABLE ==== */
 
-  .table-head{
-    
-      background: #98b4ac;
-      box-shadow: none;
-      color: #fff;
-      font-weight: 600;
-      line-height: 5px;
-        box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
-        width: 500px;
-        margin: auto;
-        border-radius: 20px;
+  #box {
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow:
+      0 9px 33px rgba(0, 0, 0, 0.07);
+    min-width: 1008px;
+    min-height: 100px;
+    float: left;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+    white-space: normal;
+    word-break: break-all;
   }
-  .table-head .table-cell{
-      border-right: none;
+
+  /* === TABLE ==== */
+  .table-head {
+    background: #98b4ac;
+    box-shadow: none;
+    color: #fff;
+    font-weight: 600;
+    line-height: 5px;
+    box-shadow: 0 1px 4px 0px rgba(0, 0, 50, 0.3);
+    width: 500px;
+    margin: auto;
+    border-radius: 20px;
   }
-  .table-cell{
-      display: table-cell;
-      width: 20%;
-      text-align: center;
-      padding: 4px 0;
-      border-right: 1px solid #98b4ac;
-      vertical-align: middle;
+
+  .table-head .table-cell {
+    border-right: none;
   }
-  .first-cell{
-      text-align: left;
-      padding-left: 10px;
-      width: 8%;
+
+  .table-cell {
+    display: table-cell;
+    width: 20%;
+    text-align: center;
+    padding: 4px 0;
+    border-right: 1px solid #98b4ac;
+    vertical-align: middle;
   }
-  .last-cell{
-      border-right: none;
-      width: 15px;
+
+  .first-cell {
+    text-align: left;
+    padding-left: 10px;
+    width: 8%;
   }
+
+  .last-cell {
+    border-right: none;
+    width: 15px;
+  }
+
   /* a{
       textdecoration: none;
       color: #555;
   } */
-  p{
+  p {
     font-size: 17px;
     color: black;
   }
-  .listTitle{
+
+  .listTitle {
     font-size: 20px;
     text-align: center;
   }
+
   @media only screen and (max-width: 600px) {
     .table-row {
       font-size: 11px;
       margin: auto;
     }
   }
-  .trow-list{
-        display:inline-block;
-      width: 70%;
-     
-      font-family: sans-serif;
-      background: transparent;
-      padding: 10px 0;
-      margin: auto;
-   
-  
-  
+
+  .trow-list {
+    display: inline-block;
+    width: 70%;
+    font-family: sans-serif;
+    background: transparent;
+    padding: 10px 0;
+    margin: auto;
   }
-  .modal1{
+
+  .modal1 {
     font-size: 22px;
     font-weight: 300;
     text-align: left;
     margin-left: auto;
   }
-  .modal2{
+
+  .modal2 {
     font-size: 21px;
     text-align: left;
     /* line-height: 25px; */
   }
+
   div.item {
-  
-      vertical-align: auto;
-      display: inline-block;
-  
-      text-align: center;
-  
-      width: 120px;
+    vertical-align: auto;
+    display: inline-block;
+    text-align: center;
+    width: 120px;
   }
-  
+
   .caption {
-  
-      display: block;
+    display: block;
   }
-  .item{
-    width:200px;
-    text-align:center;
-    display:block;
+
+  .item {
+    width: 200px;
+    text-align: center;
+    display: block;
     background-color: transparent;
     border: 1px solid transparent;
     margin-right: 10px;
     margin-bottom: 1px;
-    float:left;
-  }
-  
-  #index-gallery{
-    width:465px;
-  }
-.Pbox{
-  font-size: 19px;
-  line-height: 30px;
-  text-align: justify;
-
-}
-.column{
- min-width: 300px;
- float:left;
- margin-right:20px;
-}
-.row{
-  width: 500px;
- float:right;
- text-align: left;
- text-align: justify;
-  flex-direction: column-reverse;
-  padding: 8px;
-  margin-left: auto;
- padding: 10px; 
-  line-height: 30px;
-  
-}
-.rowText{
-  font-size: 23px;
-  min-width: 900px;
-  padding: 10px;
-}
-.image{
-  max-width: 320px;
-  height: 150px; 
-}
-.picInfo{
-  display: flex;
-justify-content: center;
-}
-.column{
- width:250px;
- float:left;
- margin-right:20px;
-
-}
-
-.row1{
- width: 450px;
- float:left;
-margin-left: 200px;
-padding-top: 17px;
-
-}
-
-
-.last{
- margin:0;
- padding: 10px;   
-}
-.pText{
-  font-weight: 600;
-  font-size: 20px;
-
-}
-.bText{
-  color: #000;
-  font-size: 20px;
-}
-
-form.cleanForm {
-width:700px;
-margin:0 auto;
-
-}
-form.cleanForm p {
-margin-bottom:15px;
-}
-.fac{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
-}
-
-.buttonF {
-  position: fixed;
-width: 100%;
-min-width: 1320px;
-height: 60px;
-font-family: 'Roboto', sans-serif;
-font-size: 15px;
-text-transform: uppercase;
-letter-spacing: 2.5px;
-font-weight: 600;
-color: #000;
-background-color: #d8c090;
-border: none;
-border-radius: 8px;
-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-transition: all 0.3s ease 0s;
-cursor: pointer;
-outline: none;
+    float: left;
   }
 
+  #index-gallery {
+    width: 465px;
+  }
+
+  .Pbox {
+    font-size: 19px;
+    line-height: 30px;
+    text-align: justify;
+  }
+
+  .column {
+    min-width: 300px;
+    float: left;
+    margin-right: 20px;
+  }
+
+  .row {
+    width: 500px;
+    float: right;
+    text-align: left;
+    text-align: justify;
+    flex-direction: column-reverse;
+    padding: 8px;
+    margin-left: auto;
+    padding: 10px;
+    line-height: 30px;
+  }
+
+  .rowText {
+    font-size: 24px;
+  }
+
+  .image {
+    max-width: 320px;
+    height: 150px;
+  }
+
+  .picInfo {
+    display: flex;
+    justify-content: center;
+  }
+
+  .column {
+    width: 250px;
+    float: left;
+    margin-right: 20px;
+  }
+
+  .row1 {
+    width: 450px;
+    float: left;
+    margin-left: 200px;
+    padding-top: 17px;
+  }
+
+  .last {
+    margin: 0;
+    padding: 10px;
+  }
+
+  .pText {
+    font-weight: 600;
+    font-size: 20px;
+  }
+
+  .bText {
+    color: #000;
+    font-size: 20px;
+  }
+
+  form.cleanForm {
+    width: 700px;
+    margin: 0 auto;
+  }
+
+  form.cleanForm p {
+    margin-bottom: 15px;
+  }
+
+  .fac {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+  }
+
+  .buttonF {
+    position: fixed;
+    width: 100%;
+    min-width: 1320px;
+    height: 60px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 600;
+    color: #fff;
+    background-color: #d8c090;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  }
+    .info-card {
+    margin: 0 auto;
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    width: 40vw;
+    height: 60vh;
+    border-radius: 5px;
+    flex-direction: column;
+    overflow: hidden;
+    background-color: whitesmoke;
+    margin-top: 8vh;
+  }
+    @media screen and (max-width: 320px) {
+    .card1 {
+      width: 70%;
+    }
+  }
+  .info-div{
+
+  }
 </style>
 <div class="fac">
-  <button type="submit" class="buttonF">Schedule Information</button>
-</div> 
-
-<br>
-<div class="card1">
-  <form action="#" class="cleanForm" method="POST">
-<br>
-{% for message in messages %}
-<center><b><p>{{message}} !</p></b></center>
-{% endfor %}
-
-<div class="column">
-<div class="row">  
-<img class="image"
-src="https://openclipart.org/download/247324/abstract-user-flat-1.svg"  
-> 
-<br>
-<p class="pText"><b class="bText">Students Name: &nbsp;</b>{{object.lastname}}, {{object.firstname}}</p> 
-
-
-<div>
-  <p class="rowText">
-    You have a schedule appointment on <b>{{object.date}}</b> with a Start Session of <b>{{object.start_time}}</b>
-    and ends in <b>{{object.end_time}}</b> With the Reasons stated below:
-  <div id="box">
-    <li style="font-size: 21px; padding: 10px;"><b>{{object.reasons}}</b></li>
+  <button type="submit" class="buttonF">Counseling Information</button>
+</div>
+<div class="info-card">
+    <form action="#" class="cleanForm" method="POST">
+            <br> {% for message in messages %} <center>
+      <b>
+        <p>{{message}} !</p>
+      </b>
+    </center> {% endfor %}
+    <br>
+      <div class="info-div">
+        <h3 style="font-size: 26px;">
+          <i>Schedule of Counseling</i>
+        </h3>
+        <br>
+        <p class="rowText"> You have a schedule appointment on <b>{{object.date}}</b> with a Start Session of <b>{{object.start_time}}</b> and ends in <b>{{object.end_time}}</b>
+          <br>
+        </p>
+      </div>
+    </form>
   </div>
-  </p>
-</div>
-
-
-
-</div>
-</div>
-<br> <br> <br> <br> <br> <br>  
-
-<div class="column">
-<div class="row1"> 
-  <p class="pText"><b class="bText">Students ID Number: &nbsp;</b>{{object.studnumber}}</p>
-&nbsp;    &nbsp;   
-</div>
-
-</div>
-
-</form>
-</div>
-
-       
-{% endblock %}
+ {% endblock %}
