--- a/templates/verification.html
+++ b/templates/verification.html
@@ -1,294 +1,279 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  </head>
+  <style>
+    @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 
-<head>
-	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-<style>
-	@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+    * {
+      box-sizing: border-box;
+    }
 
-	* {
-		box-sizing: border-box;
-	}
-
-	body {
-		background: #d8c090;
-		background: -webkit-linear-gradient(to right, #98b4ac,#d8c090,);
-		background: linear-gradient(to left, #d8c090, #98b4ac);
-		/* background: -webkit-linear-gradient(to right, #98b4ac, #d8c090);
+    body {
+      background: #d8c090;
+      background: -webkit-linear-gradient(to right, #98b4ac, #d8c090, );
+      background: linear-gradient(to left, #d8c090, #98b4ac);
+      /* background: -webkit-linear-gradient(to right, #98b4ac, #d8c090);
 	background: linear-gradient(to right, #d8c090, #98b4ac); */
-		/* background-image: url("https://media.macphun.com/img/uploads/customer/how-to/579/15531840725c93b5489d84e9.43781620.jpg?q=85&w=1340"), url("paper.gif"); */
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		flex-direction: column;
-		font-family: 'Montserrat', sans-serif;
-		height: 95vh;
-		margin: -20px 0 50px;
-	}
+      /* background-image: url("https://media.macphun.com/img/uploads/customer/how-to/579/15531840725c93b5489d84e9.43781620.jpg?q=85&w=1340"), url("paper.gif"); */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      font-family: 'Montserrat', sans-serif;
+      height: 95vh;
+      margin: -20px 0 50px;
+    }
 
-	h1 {
-		font-weight: bold;
-		margin: 0;
-	}
+    h1 {
+      font-weight: bold;
+      margin: 0;
+    }
 
-	p {
-		font-size: 14px;
-		font-weight: 100;
-		line-height: 20px;
-		letter-spacing: 0.5px;
-		margin: 20px 0 30px;
-	}
+    p {
+      font-size: 14px;
+      font-weight: 100;
+      line-height: 20px;
+      letter-spacing: 0.5px;
+      margin: 20px 0 30px;
+    }
 
-	span {
-		font-size: 12px;
-	}
+    span {
+      font-size: 12px;
+    }
 
-	a {
-		color: #333;
-		font-size: 14px;
-		text-decoration: none;
-		margin: 15px 0;
-	}
+    a {
+      color: #333;
+      font-size: 14px;
+      text-decoration: none;
+      margin: 15px 0;
+    }
 
-	button {
-		border-radius: 20px;
-		border: 1px solid #48444c;
-		color: #FFFFFF;
-		font-size: 12px;
-		font-weight: bold;
-		padding: 12px 45px;
-		letter-spacing: 1px;
-		text-transform: uppercase;
-		transition: transform 80ms ease-in;
-	}
+    button {
+      border-radius: 20px;
+      border: 1px solid #95B9C7;
+      color: #FFFFFF;
+      font-size: 13.5px;
+      font-weight: bold;
+      padding: 0 auto;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      transition: transform 80ms ease-in;
+      margin: 0 auto;
+      height: 3.5vh;
+    }
 
-	form {
-		background-color: #FFFFFF;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		flex-direction: column;
-		padding: 0 50px;
-		height: 100%;
-		text-align: center;
-	}
+    form {
+      background-color: #FFFFFF;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      padding: 0 50px;
+      height: 100%;
+      text-align: center;
+    }
 
-	input {
-		background-color: #eee;
-		border: none;
-		padding: 12px 15px;
-		margin: 8px 0;
-		width: 100%;
-	}
+    input {
+      background-color: #eee;
+      border: none;
+      padding: 12px 15px;
+      margin: 8px 0;
+      width: 100%;
+    }
 
-	.container {
-		background-color: #d8c090;
-		border-radius: 10px;
-		box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-		position: relative;
-		overflow: hidden;
-		width: 1000px;
-		max-width: 600%;
-		min-height: 520px;
-	}
+    .container {
+      background-color: #d8c090;
+      border-radius: 10px;
+      box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+      position: relative;
+      overflow: hidden;
+      width: 1000px;
+      max-width: 600%;
+      min-height: 520px;
+    }
 
-	.form-container {
-		position: absolute;
-		top: 0;
-		height: 100%;
-	}
+    .form-container {
+      position: absolute;
+      top: 0;
+      height: 100%;
+    }
 
-	.log-in-container {
-		left: 0;
-		width: 50%;
-		z-index: 2;
-	}
+    .log-in-container {
+      left: 0;
+      width: 50%;
+      z-index: 2;
+    }
 
+    .overlay-container {
+      position: absolute;
+      top: 0;
+      left: 50%;
+      width: 50%;
+      height: 100%;
+    }
 
-	.overlay-container {
-		position: absolute;
-		top: 0;
-		left: 50%;
-		width: 50%;
-		height: 100%;
-	}
-
-
-	.overlay {
-		background: #98b4ac;
-		/* background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
+    .overlay {
+      background: #98b4ac;
+      /* background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
 	background: linear-gradient(to right, #FF4B2B, #FF416C); */
-		background-repeat: no-repeat;
-		background-size: cover;
-		background-position: 0 0;
-		color: #FFFFFF;
-		position: relative;
-		left: -100%;
-		height: 100%;
-		width: 200%;
-	}
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: 0 0;
+      color: #FFFFFF;
+      position: relative;
+      left: -100%;
+      height: 100%;
+      width: 200%;
+    }
 
-	.overlay-panel {
-		position: absolute;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		flex-direction: column;
-		padding: 0 40px;
-		text-align: center;
-		top: 0;
-		height: 100%;
-		width: 50%;
-	}
+    .overlay-panel {
+      position: absolute;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      padding: 0 40px;
+      text-align: center;
+      top: 0;
+      height: 100%;
+      width: 50%;
+    }
 
+    .overlay-right {
+      right: 0;
+    }
 
-	.overlay-right {
-		right: 0;
-	}
+    .social-container {
+      margin: 50px 0;
+    }
 
+    .social-container a {
+      border: 1px solid #DDDDDD;
+      border-radius: 50%;
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      margin: 0 5px;
+      height: 40px;
+      width: 40px;
+    }
 
-	.social-container {
-		margin: 50px 0;
-	}
+    .user_card {
+      width: 350px;
+      margin-top: auto;
+      margin-bottom: auto;
+      background: #74cfbf;
+      position: relative;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      padding: 10px;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      border-radius: 5px;
+    }
 
-	.social-container a {
-		border: 1px solid #DDDDDD;
-		border-radius: 50%;
-		display: inline-flex;
-		justify-content: center;
-		align-items: center;
-		margin: 0 5px;
-		height: 40px;
-		width: 40px;
-	}
+    .form_container {
+      margin-top: 20px;
+    }
 
+    #form-title {
+      color: #fff;
+    }
 
-	.user_card {
-		width: 350px;
-		margin-top: auto;
-		margin-bottom: auto;
-		background: #74cfbf;
-		position: relative;
-		display: flex;
-		justify-content: center;
-		flex-direction: column;
-		padding: 10px;
-		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-		-webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-		-moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-		border-radius: 5px;
+    .login_btn {
+      width: 40%;
+      background: #95B9C7 !important;
+      color: white !important;
+    }
 
-	}
+    .login_btn:hover {
+      background-color: #95B9C7;
+      box-shadow: 0px 5px 5px #C9C0BB;
+      color: #fff;
+      transform: translateY(-7px);
+    }
 
-	.form_container {
-		margin-top: 20px;
-	}
+    .login_btn:focus {
+      box-shadow: none !important;
+      outline: 0px !important;
+    }
 
-	#form-title {
-		color: #fff;
+    .login_container {
+      padding: 0 2rem;
+    }
 
-	}
+    .input-group-text {
+      background: #f7ba5b !important;
+      color: white !important;
+      border: 0 !important;
+      border-radius: 0.25rem 0 0 0.25rem !important;
+    }
 
-	.login_btn {
-		width: 60%;
-		background: #48444c!important;
-		color: white !important;
-	}
+    .input_user,
+    .input_pass:focus {
+      box-shadow: none !important;
+      outline: 0px !important;
+    }
 
-	.login_btn:focus {
-		box-shadow: none !important;
-		outline: 0px !important;
-	}
+    #messages {
+      background-color: grey;
+      color: #fff;
+      padding: 10px;
+      margin-top: 10px;
+    }
 
-	.login_container {
-		padding: 0 2rem;
-	}
-
-	.input-group-text {
-		background: #f7ba5b !important;
-		color: white !important;
-		border: 0 !important;
-		border-radius: 0.25rem 0 0 0.25rem !important;
-	}
-
-	.input_user,
-	.input_pass:focus {
-		box-shadow: none !important;
-		outline: 0px !important;
-	}
-
-	#messages {
-		background-color: grey;
-		color: #fff;
-		padding: 10px;
-		margin-top: 10px;
-	}
-
-	img {
-		display: block;
-		margin-left: auto;
-		margin-right: auto;
-		width: 400px;
-		height: 300px;
-		margin-bottom: 40px;
+    img {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 400px;
+      height: 300px;
+      margin-bottom: 40px;
       /* margin-right: 90px;
       margin-left: 90px; */
+    }
+	#id_code{
+		width: 12.5vw;
 	}
-</style>
-
-<body>
-
-	<div class="container" id="container">
-		<div class="form-container log-in-container">
-		<form method="POST" action="">
-      {% csrf_token %}
-      <h2>Welcome to Follow App</h2>
-	 <p><i>Kindly Input Your Code Here Send Via Gmail</i></p>
-   
-      
-     <div>
-					{{form.code}}
-				</div>
-			 
-
-        {% for message in messages %}
-					   <center> <p>{{message}}</p> </center>
-				   {% endfor %}
-     
-    
-	  <button type="submit"  class="btn login_btn">Submit</button>
-    </form>
-		</div>
-		<div class="overlay-container"
-			style="background-image: url(https://media.macphun.com/img/uploads/customer/how-to/579/15531840725c93b5489d84e9.43781620.jpg?q=85&w=1340);">
-			<div class="overlay">
-				<div class="overlay-panel overlay-right">
-
-
-					<img
-						src="https://1.bp.blogspot.com/-zssvz_H77as/YSdIaUUbIbI/AAAAAAAAAf0/xhPKHM0G8dczMa5vP7MPCZvNVeZQkpKgACLcBGAsYHQ/w945-h600-p-k-no-nu/logo3.png"></img>
-				
-				</div>
-			</div>
-
-		</div>
-		<script>
-			/* Because i didnt set placeholder values in forms.py they will be set here using vanilla Javascript
+  </style>
+  <body>
+    <div class="container" id="container">
+      <div class="form-container log-in-container">
+        <form method="POST" action=""> {% csrf_token %} <h2>Welcome to Follow App</h2>
+          <p>
+            <i>Kindly Input Your Code Here Send Via SMS</i>
+          </p>
+          <div>
+            {{form.code}}
+          </div> {% for message in messages %} <center>
+            <p>{{message}}</p>
+          </center> {% endfor %} <br>
+          <button type="submit" class="btn login_btn">Submit</button>
+        </form>
+      </div>
+      <div class="overlay-container" style="background-image: url(https://media.macphun.com/img/uploads/customer/how-to/579/15531840725c93b5489d84e9.43781620.jpg?q=85&w=1340);">
+        <div class="overlay">
+          <div class="overlay-panel overlay-right">
+            <img src="https://1.bp.blogspot.com/-zssvz_H77as/YSdIaUUbIbI/AAAAAAAAAf0/xhPKHM0G8dczMa5vP7MPCZvNVeZQkpKgACLcBGAsYHQ/w945-h600-p-k-no-nu/logo3.png"></img>
+          </div>
+        </div>
+      </div>
+      <script>
+        /* Because i didnt set placeholder values in forms.py they will be set here using vanilla Javascript
 //We start indexing at one because CSRF_token is considered and input field 
 */
-
-			//Query All input fields
-			var form_fields = document.getElementsByTagName('input')
-			form_fields[1].placeholder = 'Input Code here';
-
-
-			for (var field in form_fields) {
-				form_fields[field].className += 'form-control'
-			}
-		</script>
-	</div>
-</body>
-
+        //Query All input fields
+        var form_fields = document.getElementsByTagName('input')
+        form_fields[1].placeholder = 'Input Code here';
+        for (var field in form_fields) {
+          form_fields[field].className += 'form-control'
+        }
+      </script>
+    </div>
+  </body>
 </html>
